Convert to utf-8

--- a/9acwg.html
+++ b/9acwg.html
@@ -10,13 +10,13 @@ translated: 2007-05-14
 <b>9A-CW-G: </b>Croatian Telegraphy Group (Kroatiska telegrafigruppen)<BR>
 <P>
 Telegrafiklubben i Kroatien:<BR>
-Kolla ovanstående web-sida om du kan läsa 9A-språket.
+Kolla ovanstÃ¥ende web-sida om du kan lÃ¤sa 9A-sprÃ¥ket.
 Du kommer att hitta
-allmän information, 
-regler för W-9ACWG-M diploment, och
+allmÃ¤n information, 
+regler fÃ¶r W-9ACWG-M diploment, och
 en medlemslista.
 <BR>
-Tillgänglig e-mail adress:...9a3pa (at) 9a0tcp.ampr.org...
+TillgÃ¤nglig e-mail adress:...9a3pa (at) 9a0tcp.ampr.org...
 <BR>
 Sekreterare: <BR>
            MATO SAMARDZIC, 9A3SM<BR>
@@ -26,7 +26,7 @@ Sekreterare: <BR>
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
