--- a/agcw.html
+++ b/agcw.html
@@ -8,25 +8,25 @@ translated: 2007-05-14
 </CENTER><P ALIGN=LEFT>
 <ul><a href="http://www.agcw.de/"><b>AGCW:</b></a>
 <b>A</b>ctivity <b>G</b>roup <b>CW-DL</b> <BR>
-är en telegrafiklubb från tyskland.
+Ã¤r en telegrafiklubb frÃ¥n tyskland.
 Den har ca 2000 medlemmar och de flesta av dem finns i 
-tysktalande länder.
-Klubbens ger ut en tidning två gånger om året skriven på tyska.
+tysktalande lÃ¤nder.
+Klubbens ger ut en tidning tvÃ¥ gÃ¥nger om Ã¥ret skriven pÃ¥ tyska.
 </P>
 <P ALIGN=LEFT>
-[Översättarens anmärkning:
-Information om att AGCW ECM är ansvarig för dessa websidor är
-utelämnad i den svenska översättningen.]
+[Ã–versÃ¤ttarens anmÃ¤rkning:
+Information om att AGCW ECM Ã¤r ansvarig fÃ¶r dessa websidor Ã¤r
+utelÃ¤mnad i den svenska Ã¶versÃ¤ttningen.]
 </P>
 <P ALIGN=LEFT>
-Medlemsskap i AGCW är öppet för alla telegrafivänner.
-AGCW har nära relationer med den vanliga amatörradioklubben i tyskland -
+Medlemsskap i AGCW Ã¤r Ã¶ppet fÃ¶r alla telegrafivÃ¤nner.
+AGCW har nÃ¤ra relationer med den vanliga amatÃ¶rradioklubben i tyskland -
 <a href="http://www.darc.de">DARC</a>. 
 <BR CLEAR=LEFT>
 </P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
