--- a/cft.html
+++ b/cft.html
@@ -7,34 +7,34 @@ translated: 2007-05-14
 <P><img src="imgsclub/cft.gif" ALT="" align=left></P>
 </CENTER><P ALIGN=LEFT>
 <A HREF="http://www.on5cft.be.tf">CFT</A>
-<B>Club Francophone Télégraphiste</B></P>
+<B>Club Francophone TÃ©lÃ©graphiste</B></P>
 (Fransktalande telegrafistklubben)
 <P>
-Denna belgiska klubb ägnar sig åt telegrafi inom amatörradio och
-amatöranda i allmänhet.
-Klubben kommer ursprungligen från de fransktalande delarna av Belgien
-men internationella medlemmar är också välkomna.
+Denna belgiska klubb Ã¤gnar sig Ã¥t telegrafi inom amatÃ¶rradio och
+amatÃ¶randa i allmÃ¤nhet.
+Klubben kommer ursprungligen frÃ¥n de fransktalande delarna av Belgien
+men internationella medlemmar Ã¤r ocksÃ¥ vÃ¤lkomna.
 </P>
 <P>
-För att bli medlem måste du kontakta klubbens grundare:
+FÃ¶r att bli medlem mÃ¥ste du kontakta klubbens grundare:
 ON4KML - ON4LDL - ON4LEX - ON4RU - ON4KMB - ON4WC - ON4KRS
 eller deras klubbstation
 ON4CPN,
-företrädesvis på fredagkvällar på 3520 kHz kl 21 lokal tid.
-QSO:et måste vara minst 15 minuter långt.
+fÃ¶retrÃ¤desvis pÃ¥ fredagkvÃ¤llar pÃ¥ 3520 kHz kl 21 lokal tid.
+QSO:et mÃ¥ste vara minst 15 minuter lÃ¥ngt.
 </P><P> 
 Rekommenderade QRGs 3520, 7020, 14020, 21020 kHz.
 </P><P>
-Mer information från
+Mer information frÃ¥n
 E-mail...r.michaux (at symbol) skynet.be...
 <BR>
-<A HREF="imgsclub/logo_cft2.jpg">Klicka här för att se CFT-logon i storformat
-såsom den är designad av F6IIE.
+<A HREF="imgsclub/logo_cft2.jpg">Klicka hÃ¤r fÃ¶r att se CFT-logon i storformat
+sÃ¥som den Ã¤r designad av F6IIE.
 </A>
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
