--- a/ctc.html
+++ b/ctc.html
@@ -12,11 +12,11 @@ Kroatiska telegrafiklubben
 <P>
 Telegrafiklubb i Kroatien som grundades den 12:e december 2001.<BR>
 <BR>
-Enda kravet för medlemsskap är att vara en aktiv
-radioamatörtelegrafioperatör.
+Enda kravet fÃ¶r medlemsskap Ã¤r att vara en aktiv
+radioamatÃ¶rtelegrafioperatÃ¶r.
 Rekommenderade arbetsfrekvenser: 3.530, 7.015, 14.030, 21.030, och 28.030 MHz.
 <BR>
-Tillgänglig E-mailadress:...9a3fo (at) hi.hinet.hr...
+TillgÃ¤nglig E-mailadress:...9a3fo (at) hi.hinet.hr...
 <BR>
 Sekreterare: <BR>
                      Mladen Buzic<BR>
@@ -26,7 +26,7 @@ Sekreterare: <BR>
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
