--- a/eacw.html
+++ b/eacw.html
@@ -9,16 +9,16 @@ translated: 2007-05-14
 <A HREF="http://eacwclub.esp.st"><b>EACW:</b>
 </A>
 EA CW Club<BR>
-Telegrafiklubb som är mycket aktiv i Spanien och spansktalande länder.
-Medlemsskapet är gratis och klubben är ganska aktiv på Internet.
+Telegrafiklubb som Ã¤r mycket aktiv i Spanien och spansktalande lÃ¤nder.
+Medlemsskapet Ã¤r gratis och klubben Ã¤r ganska aktiv pÃ¥ Internet.
 <P>
 Klubben grundades av EA4WH Jorge och EA4DXY Vicenta in september 2001.
 <P>
-För att gå med i klubben måste du tillhandahålla bevis för att du har
-kontaktat ett antal spanska stationer på telegrafi.
-Det är dock inte ett explicit krav att prata spanska,
+FÃ¶r att gÃ¥ med i klubben mÃ¥ste du tillhandahÃ¥lla bevis fÃ¶r att du har
+kontaktat ett antal spanska stationer pÃ¥ telegrafi.
+Det Ã¤r dock inte ett explicit krav att prata spanska,
 men om du vill bidra aktivt till klubblivet rekommenderas att du
-kan läsa spanska.
+kan lÃ¤sa spanska.
 <P>
 Sekreterare:
 <PRE>
@@ -26,13 +26,13 @@ Sekreterare:
     P. O. Box 45
     E-13320 Villanueva de los Infantes, Ciudad Real
 </PRE>
-Ordföranden i EACW är:
+OrdfÃ¶randen i EACW Ã¤r:
 <PRE>
     Jorge Arcos Pavon, EA4WH
     P. O. Box 45
     E-13320 Villanueva de los Infantes, Ciudad Real
 </PRE>
-Konktatperson, webmaster och mailinglistadministrator är
+Konktatperson, webmaster och mailinglistadministrator Ã¤r
 <PRE>
     Tony Herrera Caro, ea3re(at)yahoo.es
     Travesera de Montigala , 48 4 A
@@ -43,7 +43,7 @@ Konktatperson, webmaster och mailinglistadministrator är
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
