--- a/eaqrp.html
+++ b/eaqrp.html
@@ -7,13 +7,13 @@ translated: 2007-05-14
 <P><img src="imgsclub/eaqrp.gif" ALT="" align=left></P>
 <P ALIGN=LEFT>
 <a href="http://www.eaqrp.com/"><b>EA-QRP-C:</b></a><br>
-Målet för den spanska EA-QRP-CLUB är att markadsföra radiokommunikation
-i vilken mod som helst då man använder lite eller mycket lite effekt.
-(QRP 5W eller mindre på CW och upp till 10W PEP på SSB).
+MÃ¥let fÃ¶r den spanska EA-QRP-CLUB Ã¤r att markadsfÃ¶ra radiokommunikation
+i vilken mod som helst dÃ¥ man anvÃ¤nder lite eller mycket lite effekt.
+(QRP 5W eller mindre pÃ¥ CW och upp till 10W PEP pÃ¥ SSB).
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
