--- a/ehsc.html
+++ b/ehsc.html
@@ -7,12 +7,12 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://www.morsecode.nl/ehscn.html"><b>EHSC:</b></a>
 <b>E</b>xtremely <b>H</b>igh <b>S</b>peed <b>C</b>lub
-(Extremt hög hastighetsklubben)<BR>
-är en höghastighetstelegrafiklubb för 
-de som gillar telegrafi i hastigheter på åtminstone 60 wpm
-(300 tecken/min (PARIS) [Översättarens anmärkning])
+(Extremt hÃ¶g hastighetsklubben)<BR>
+Ã¤r en hÃ¶ghastighetstelegrafiklubb fÃ¶r 
+de som gillar telegrafi i hastigheter pÃ¥ Ã¥tminstone 60 wpm
+(300 tecken/min (PARIS) [Ã–versÃ¤ttarens anmÃ¤rkning])
 <P><HR><P>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
