--- a/eucons.html
+++ b/eucons.html
@@ -12,7 +12,7 @@
 
 <p align="center">
   <font size="5">
-    <strong>Det europeiska CW-förbundet</strong>
+    <strong>Det europeiska CW-fÃ¶rbundet</strong>
   </font>
   <br>
   <font size="5">
@@ -28,12 +28,12 @@
 
 <p align="left">
   <font size="3">
-Syftet med EUCW är att skapa ett förbund av oberoende 
-europeiska amatörradiotelegrafiklubbar.
-Genom att använda förbundet som en plattform,
+Syftet med EUCW Ã¤r att skapa ett fÃ¶rbund av oberoende 
+europeiska amatÃ¶rradiotelegrafiklubbar.
+Genom att anvÃ¤nda fÃ¶rbundet som en plattform,
 kan medlemsklubbar utbyta ideer och information,
-organiseras aktiviteter som innebär ömsesidigt deltagande och
-samarbeta i allmänhet för amatörradiotelegrafins främjande.
+organiseras aktiviteter som innebÃ¤r Ã¶msesidigt deltagande och
+samarbeta i allmÃ¤nhet fÃ¶r amatÃ¶rradiotelegrafins frÃ¤mjande.
   </font>
 </p>
 
@@ -51,22 +51,22 @@ samarbeta i allmänhet för amatörradiotelegrafins främjande.
     <br>
     <strong>ARTIKEL I</strong>
     <br>
-    <strong>Namn och syfte med förbundet</strong>
+    <strong>Namn och syfte med fÃ¶rbundet</strong>
   </font>
 </p>
 
 <p align="left">
   <font size="3">
     <strong>Stycke 1.</strong>
-Förbundet är känt som 
+FÃ¶rbundet Ã¤r kÃ¤nt som 
 "THE EUROPEAN CW ASSOCIATION" (EUCW)
-(Det europeiska CW-förbundet)
+(Det europeiska CW-fÃ¶rbundet)
 <br>
     <strong>Stycke 2.</strong>
-Syftet med förbundet är:
-Genom samarbete mellan medlemsklubbarna, skapa ett stöd och uppmuntran
-till amatörradiotelegrafiaktivitet och att försvara sådan aktivitet
-när den hotas på något sätt.
+Syftet med fÃ¶rbundet Ã¤r:
+Genom samarbete mellan medlemsklubbarna, skapa ett stÃ¶d och uppmuntran
+till amatÃ¶rradiotelegrafiaktivitet och att fÃ¶rsvara sÃ¥dan aktivitet
+nÃ¤r den hotas pÃ¥ nÃ¥got sÃ¤tt.
   </font>
 </p>
 
@@ -83,33 +83,33 @@ när den hotas på något sätt.
 <p align="left">
   <font size="3">
     <strong>Stycke 1.</strong>
-Medlemmar i förbundet består av de klubbar som har skrivit på
+Medlemmar i fÃ¶rbundet bestÃ¥r av de klubbar som har skrivit pÃ¥
 samarbetscertifikatet.<br>
     <strong>Stycke 2.</strong>
-Varje amatörradiotelegrafiklubb som tillhandhåller nöjaktiga bevis
+Varje amatÃ¶rradiotelegrafiklubb som tillhandhÃ¥ller nÃ¶jaktiga bevis
 av att den har 100 eller fler licensierade personer som medlemmar
-kan ansöka om fullt (röstberättigat) medlemsskap i EUCW.
-Varje amatörradioklubb som tillhandahåller nöjaktiga bevis av att
-den har 5 till 99 licensierade personer som medlemmar kan ansöka
-om begränsat, (icke-röstberättigat) medlemsskap i EUCW.
-Ansökningar godkänns om ingen av medlemsklubbarna presenterar
-någon invändning.<br>
+kan ansÃ¶ka om fullt (rÃ¶stberÃ¤ttigat) medlemsskap i EUCW.
+Varje amatÃ¶rradioklubb som tillhandahÃ¥ller nÃ¶jaktiga bevis av att
+den har 5 till 99 licensierade personer som medlemmar kan ansÃ¶ka
+om begrÃ¤nsat, (icke-rÃ¶stberÃ¤ttigat) medlemsskap i EUCW.
+AnsÃ¶kningar godkÃ¤nns om ingen av medlemsklubbarna presenterar
+nÃ¥gon invÃ¤ndning.<br>
 
     <strong>Stycke 3.</strong>
 Det finns ingen medlemsavgift.<br>
 
     <strong>Stycke 4.</strong>
-Varje medlemsklubb får dra sig ur förbundet genom att skicka
-in en skriftlig anmälan om utträde.<br>
+Varje medlemsklubb fÃ¥r dra sig ur fÃ¶rbundet genom att skicka
+in en skriftlig anmÃ¤lan om uttrÃ¤de.<br>
 
     <strong>Stycke 5.</strong>
-Varje medlemsklubb som konsekvent misslyckas att stödja EUCW-aktiviteter
-och misslyckas med att ge nöjaktiga garantier till ordföranden om
-framtida stöd, normalt efter en period av två år med brist på stöd,
-uteslutas från medlemsskap i EUCW.
-Ordföranden ansvarar för att anmäla dessa omständigheter till förbundet,
+Varje medlemsklubb som konsekvent misslyckas att stÃ¶dja EUCW-aktiviteter
+och misslyckas med att ge nÃ¶jaktiga garantier till ordfÃ¶randen om
+framtida stÃ¶d, normalt efter en period av tvÃ¥ Ã¥r med brist pÃ¥ stÃ¶d,
+uteslutas frÃ¥n medlemsskap i EUCW.
+OrdfÃ¶randen ansvarar fÃ¶r att anmÃ¤la dessa omstÃ¤ndigheter till fÃ¶rbundet,
 via EUCW bulletinen, och att rekommendera avslutat medlemsskap om det
-anses tillämpligt.
+anses tillÃ¤mpligt.
   </font>
 </p>
 
@@ -128,30 +128,30 @@ anses tillämpligt.
 <p align="left">
   <font size="3">
     <strong>Stycke 1.</strong>
-Förbundet är själv-styrande.
-Var tredje år skall en medlemsklubb med fullt medlemsskap i förbundet
-nominera EUCW-ordföranden.
-Sådana klubbar skall turas om att nominera ordföranden i enlighet
-med ordningen i följande lista.
-När en medlemsklubb inte kan nominera en ordförande vid rätt tid har
-den avgående ordföranden ansvaret att söka efter nomineringar från
-andra medlemsklubbar och att hålla en omröstning bland medlemsklubbarna
-om fler än en nominering tas emot.<br>
+FÃ¶rbundet Ã¤r sjÃ¤lv-styrande.
+Var tredje Ã¥r skall en medlemsklubb med fullt medlemsskap i fÃ¶rbundet
+nominera EUCW-ordfÃ¶randen.
+SÃ¥dana klubbar skall turas om att nominera ordfÃ¶randen i enlighet
+med ordningen i fÃ¶ljande lista.
+NÃ¤r en medlemsklubb inte kan nominera en ordfÃ¶rande vid rÃ¤tt tid har
+den avgÃ¥ende ordfÃ¶randen ansvaret att sÃ¶ka efter nomineringar frÃ¥n
+andra medlemsklubbar och att hÃ¥lla en omrÃ¶stning bland medlemsklubbarna
+om fler Ã¤n en nominering tas emot.<br>
 LIST: SCAG; AGCW-DL; G-QRP; HSC, VHSC, BENELUX-QRP; INORC; HCC;
 BTC; UFT; SHSC; FISTS; FOC.
-Nya medlemsklubbar läggs till i slutet på listan efterhand som de blir
-fulla medlemmar i förbundet.<br>
+Nya medlemsklubbar lÃ¤ggs till i slutet pÃ¥ listan efterhand som de blir
+fulla medlemmar i fÃ¶rbundet.<br>
 
     <strong>Stycke 2.</strong>
-Varje medlemsklubb representeras i förbundet av en utsedd
-EUCW-kontaktman (ECM) som måste kunna engelska.<br>
+Varje medlemsklubb representeras i fÃ¶rbundet av en utsedd
+EUCW-kontaktman (ECM) som mÃ¥ste kunna engelska.<br>
 
     <strong>Stycke 3.</strong>
-EUCW representeras officiellt av EUCW-ordföranden.
-EUCW-ordförandens mandatperiod är tre (3) år.<br>
+EUCW representeras officiellt av EUCW-ordfÃ¶randen.
+EUCW-ordfÃ¶randens mandatperiod Ã¤r tre (3) Ã¥r.<br>
 
     <strong>Stycke 4.</strong>
-Medlemsklubbar kan använda förbundets officiella emblem.<br>
+Medlemsklubbar kan anvÃ¤nda fÃ¶rbundets officiella emblem.<br>
   </font>
 </p>
 
@@ -167,28 +167,28 @@ Kommunikation och information</strong>
 <p align="left">
   <font size="3">
     <strong>Stycke 1.</strong>
-Det officiella språket för all kommunikation inom EUCW är
+Det officiella sprÃ¥ket fÃ¶r all kommunikation inom EUCW Ã¤r
 engelska.<br>
 
     <strong>Stycke 2.</strong>
-Ordföranden skall skicka en EUCW-bulletin till
-alla EUCW-kontaktmän en gång var tredje månaden
-som innehåller nyheter och information i EUCWs intresse.<br>
+OrdfÃ¶randen skall skicka en EUCW-bulletin till
+alla EUCW-kontaktmÃ¤n en gÃ¥ng var tredje mÃ¥naden
+som innehÃ¥ller nyheter och information i EUCWs intresse.<br>
 
     <strong>Stycke 3.</strong>
-Varje EUCW-kontaktman måste hålla alla andra
-EUCW-kontaktmän informerade om frågor som rör
-EUCWs intresse, normalt genom ordföranden och EUCW-bulletinen,
-men genom direkt kommunikation när tiden inte räcker till för 
+Varje EUCW-kontaktman mÃ¥ste hÃ¥lla alla andra
+EUCW-kontaktmÃ¤n informerade om frÃ¥gor som rÃ¶r
+EUCWs intresse, normalt genom ordfÃ¶randen och EUCW-bulletinen,
+men genom direkt kommunikation nÃ¤r tiden inte rÃ¤cker till fÃ¶r 
 att cirkulera viktig infomation med normala medel.<br>
 
     <strong>Stycke 4.</strong>
-EUCW-kontaktmän är ansvariga för att marknadsföra
-medvetenhet och stöd för EUCWs aktiviteter bland medlemmarna i
+EUCW-kontaktmÃ¤n Ã¤r ansvariga fÃ¶r att marknadsfÃ¶ra
+medvetenhet och stÃ¶d fÃ¶r EUCWs aktiviteter bland medlemmarna i
 deras egen klubb och uppmuntra samarbete mellan deras egna
 klubbar och andra EUCW-medlemsklubbar.
-De är också ansvariga för att publicera EUCW-aktiviteter i de nationella
-amatörradiotidningarna i deras egna länder.<br>
+De Ã¤r ocksÃ¥ ansvariga fÃ¶r att publicera EUCW-aktiviteter i de nationella
+amatÃ¶rradiotidningarna i deras egna lÃ¤nder.<br>
   </font>
 </p>
 
@@ -197,19 +197,19 @@ amatörradiotidningarna i deras egna länder.<br>
 <p align="left">
   <font size="3">
     <strong>ARTIKEL V<br>
-    Tillägg</strong>
+    TillÃ¤gg</strong>
   </font>
 </p>
 
 <p align="left">
   <font size="3">
     <strong>Stycke 1.</strong>
-Tillägg till konstitutionen kan föreslås från 
-en medlemsklubb med fullt medlemsskap genom deras EUCW-kontaktmän
-eller av EUCW-ordföranden.
-Sådana tillägg kräver godkännande av åtminstone två tredjedelar av
+TillÃ¤gg till konstitutionen kan fÃ¶reslÃ¥s frÃ¥n 
+en medlemsklubb med fullt medlemsskap genom deras EUCW-kontaktmÃ¤n
+eller av EUCW-ordfÃ¶randen.
+SÃ¥dana tillÃ¤gg krÃ¤ver godkÃ¤nnande av Ã¥tminstone tvÃ¥ tredjedelar av
 alla medlemsklubbar med fullt medlemsskap, uttryckt genom deras
-representanter (EUCW-kontaktmän), för att godkännas.
+representanter (EUCW-kontaktmÃ¤n), fÃ¶r att godkÃ¤nnas.
   </font>
 </p>
 
@@ -224,9 +224,9 @@ Reviderad november 1994.</strong><br>
 </p>
 
 <P>Not: Se <A HREF="eucwh.html">EUCW-historian</A>
-för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</P>
+fÃ¶r en komplett lista av medlemsklubbar och dagen fÃ¶r deras medlemsskap</P>
 <HR>
-<a href="eucw.html"> Tillbaka </a> till listan över EUCW-klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver EUCW-klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
