--- a/eucw.html
+++ b/eucw.html
@@ -13,23 +13,23 @@ translated: 2007-05-14
 <TR>
 <TD align="left"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="center">
-<H1>EUCW - DET EUROPEISKA TELEGRAFIFÖRBUNDET<BR>
+<H1>EUCW - DET EUROPEISKA TELEGRAFIFÃ–RBUNDET<BR>
 <FONT size="-1">c/o E.C.M. of AGCW-DL</FONT></H1>
 </TD>
 <TD align="right"><IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
 </TABLE>
 
-<H2>Lista över de europeiska medlemsklubbarna och deras<BR>
+<H2>Lista Ã¶ver de europeiska medlemsklubbarna och deras<BR>
 "EUCW Communication Managers" (ECMs)</H2>
 
 <P><BR>
 Listans format (sorterad i alfabetisk ordning):</P>
 
-<P><B>Klubbens förkortning och land</B></P>
+<P><B>Klubbens fÃ¶rkortning och land</B></P>
 
 <P><B>Klubbens riktiga namn
-(Engelskt namn om det finns och skiljer sig från det riktiga namnet)</B><BR>
+(Engelskt namn om det finns och skiljer sig frÃ¥n det riktiga namnet)</B><BR>
 klubbens kategori (en av
 Vanlig CW klubb,
 QRP-klubb,
@@ -51,11 +51,11 @@ E-mail...eucw (at-symbol) agcw.de...<BR>
 <HR>
 <P><B><IMG src="flags/be.gif" align="left" alt="ON "><IMG src=
 "flags/nl.gif" align="left" alt="PA "><IMG src="flags/lu.gif" align=
-"left" alt="LX:"><A href="bqc.html">BQC</A> (Nederländerna)</B></P>
+"left" alt="LX:"><A href="bqc.html">BQC</A> (NederlÃ¤nderna)</B></P>
 
 <P><B>Benelux QRP Club</B><BR>
 QRP-klubb<BR>
-ECM: PAØWDW, Wim F.K. Witt, Valkhof 53, 2261 HS Leidschendam<BR>
+ECM: PAÃ˜WDW, Wim F.K. Witt, Valkhof 53, 2261 HS Leidschendam<BR>
 E-mail...wim (at-symbol) witt.fol.nl...<BR>
 </P>
 
@@ -73,7 +73,7 @@ E-mail...on7vu (at-symbol) vts.be...<BR>
 <P><B><IMG src="flags/be.gif" align="left" alt="ON:"> <A href=
 "cft.html">CFT</A> (Belgien)</B></P>
 
-<P><B>Club Francophone Télégraphiste</B><BR>
+<P><B>Club Francophone TÃ©lÃ©graphiste</B><BR>
 Fransktalande klubb<BR>
 ECM/Pres: ON4LDL, Michaux Robert, 124 R. Neuve, 6061
 Montignies-sur-Sambre,<BR>
@@ -96,8 +96,8 @@ Email...ctc (at-symbol) hamradio.hr...<BR>
 (Portugal)</B></P>
 
 <P><B>CT CW Club</B><BR>
-Kunskap i portugisiska krävs<BR>
-ECM: CT1BQH, João C. Morgado, r do Frono Grilo Lote 9-2e, P-2330
+Kunskap i portugisiska krÃ¤vs<BR>
+ECM: CT1BQH, JoÃ£o C. Morgado, r do Frono Grilo Lote 9-2e, P-2330
 Entroncamento<BR>
 Email...ct1bqh (at-symbol) sapo.pt...</P>
 
@@ -149,7 +149,7 @@ E-mail:...M0BPT (at-symbol) blueyonder.co.uk...<BR>
 "foc.html">FOC</A> (Storbritanien)</B></P>
 
 <P><B>First Class CW Operators Club</B><BR>
-CW-klubb begränsad till 500 medlemmar<BR>
+CW-klubb begrÃ¤nsad till 500 medlemmar<BR>
 ECM: G3LIK, Mick Puttick, 21 Sandyfield Crescent, Cowplain,
 Waterlooville Portsmouth PO8 8SQ.<BR>
 E-mail:...mickg3lik (at-symbol) ntlworld.com...<BR>
@@ -160,7 +160,7 @@ E-mail:...mickg3lik (at-symbol) ntlworld.com...<BR>
 "gqrp.html">G-QRP</A> (Storbritanien)</B></P>
 
 <P><B>G-QRP Club - Devoted to Low Power Communication</B>
-(G-GRP-klubben - För lågeffektkommunikation<BR>
+(G-GRP-klubben - FÃ¶r lÃ¥geffektkommunikation<BR>
 QRP-klubb<BR>
 ECM: G3XJS, Peter Barville, Felucca, Pinesfield Lane, Trottiscliffe, 
 West Malling, Kent, ME19 5EN, England HP15 6UG,<BR>
@@ -183,7 +183,7 @@ E-mail:...SV1DKL (at-symbol) hotmail.com...</P>
 
 <P><B>Hungarian CW Group</B><BR>
 QRQ-klubb, minst hastigheten 150<BR>
-ECM: HA3NU, László Weisz, Postbox 169, Rakoczi U16, Szegzard.<BR>
+ECM: HA3NU, LÃ¡szlÃ³ Weisz, Postbox 169, Rakoczi U16, Szegzard.<BR>
 E-mail:...jozsi (at-symbol) kvantum.tolna.net...<BR>
 </P>
 
@@ -192,7 +192,7 @@ E-mail:...jozsi (at-symbol) kvantum.tolna.net...<BR>
 "hcc.html">HCC</A> (Spanien)</B></P>
 
 <P><B>Hispania CW Club</B><BR>
-EA-anropssignal krävs för medlemsskap<BR>
+EA-anropssignal krÃ¤vs fÃ¶r medlemsskap<BR>
 </P>
 
 <HR>
@@ -212,7 +212,7 @@ E-mail:...hsc (at-symbol) darc.de...</P>
 
 <P><B>Helvetia Telegraphy Group</B><BR>
 Vanlig CW klubb<BR>
-ECM: HB9DEO, Robert Zanini, Grütstr. 40, CH-8134 Adliswil (ZH),<BR>
+ECM: HB9DEO, Robert Zanini, GrÃ¼tstr. 40, CH-8134 Adliswil (ZH),<BR>
 E-mail:...hb9deo (at-symbol) uska.ch...<BR>
 </P>
 
@@ -279,11 +279,11 @@ E-mail:...Z35M_99 (at-symbol) yahoo.com...</P>
 
 <HR>
 <P><B><IMG src="flags/at.gif" align="left" alt="OE:"> <A href=
-"oecwg.html">OE-CW-G</A> (Österrike)</B></P>
+"oecwg.html">OE-CW-G</A> (Ã–sterrike)</B></P>
 
 <P><B>OE-CW Group</B><BR>
 Vanlig CW klubb<BR>
-ECM: OE6FYG, Herbert Lafer, Speltenbach 55, A-8280 Fürstenfeld<BR>
+ECM: OE6FYG, Herbert Lafer, Speltenbach 55, A-8280 FÃ¼rstenfeld<BR>
 </P>
 
 <HR>
@@ -312,7 +312,7 @@ E-mail:...p.cunderla (at-symbol) sendme.cz...<BR>
 
 <P><B>Radio Telegraphy Club e.V. - RTC</B><BR>
 Vanlig CW klubb<BR>
-ECM.: DL4CF, Jörg H. Vollbrecht, Steingasse 3, 06642 Reinsdorf,<BR>
+ECM.: DL4CF, JÃ¶rg H. Vollbrecht, Steingasse 3, 06642 Reinsdorf,<BR>
 E-mail...dl4cf (at-symbol) arrl.net...</P>
 
 <HR>
@@ -353,7 +353,7 @@ Club Email: club (at-symbol) qrp.ru<BR>
 <P><B><IMG src="flags/pl.gif" align="left" alt="SP:"><A href=
 "spcwc.html">SPCWC</A> (Polen)</B></P>
 
-<P><B>SP-CW-C Polski Klub Telegrafistów (Polish Telegraphy
+<P><B>SP-CW-C Polski Klub TelegrafistÃ³w (Polish Telegraphy
 Club)</B><BR>
 Vanlig CW klubb<BR>
 ECM: SP2FAP, Sylwester Jarkiewicz, ul. Wielmozy 5 B, PL-82-337
@@ -368,14 +368,14 @@ E-mail:...qtc (at-symbol) post.pl...</P>
 <P><B>UCWC Radiotelegrafnij klub korotkowolnowikow (The
 International Morse Telegraphy Club UCWC)</B><BR>
 Vanlig CW klubb<BR>
-ECM: DJØMAQ, Czeslaw Grycz, Sigmaringer Str. 33, D-10713 Berlin<BR>
+ECM: DJÃ˜MAQ, Czeslaw Grycz, Sigmaringer Str. 33, D-10713 Berlin<BR>
 </P>
 
 <HR>
 <P><B><IMG src="flags/fr.gif" align="left" alt="F:"><A href=
 "uft.html">UFT</A> (Frankrike)</B></P>
 
-<P><B>Union française des Télégraphistes</B><BR>
+<P><B>Union franÃ§aise des TÃ©lÃ©graphistes</B><BR>
 French language knowledges required<BR>
 ECM: F6ENO, Alain Darve, 4 rue Kellermann, 51500
 Rilly-la-Montagne,<BR>
@@ -396,11 +396,11 @@ E-mail:...ut0ft (at-symbol) iname.com...<BR>
 <HR>
 <P><B><IMG src="flags/nl.gif" align="left" alt="PA "><IMG src=
 "flags/eu.gif" align="left" alt="Eur.:"><A href=
-"vhsc.html">VHSC</A> (Nederländerna)</B></P>
+"vhsc.html">VHSC</A> (NederlÃ¤nderna)</B></P>
 
 <P><B>Radio Telegraphy Very High Speed Club</B><BR>
 QRQ club, min. speed 200<BR>
-ECM: PAØDIN, Din J. Hoogma, Schoutstraat 15, 6525 XR Nijmegen,<BR>
+ECM: PAÃ˜DIN, Din J. Hoogma, Schoutstraat 15, 6525 XR Nijmegen,<BR>
 E-mail:...dingelom (at-symbol) hetnet.nl...<BR>
 </P>
 
@@ -418,7 +418,7 @@ E-Mail: df5zv (at-symbol) darc.de...</P>
 <P><B><IMG src="flags/mc.gif" align="left" alt="3A:">3A-CWG
 (Monaco)</B></P>
 
-<P><B>Groupe Monégasque de Télégraphie</B><BR>
+<P><B>Groupe MonÃ©gasque de TÃ©lÃ©graphie</B><BR>
 Vanlig CW klubb<BR>
 ECM: 3A2LF, Claude Passet, Palais Cynthia, 1 Blvd de Belgique,
 MC-98000 Monaco<BR>
@@ -439,16 +439,16 @@ E-Mail:...9A2EU (at-symbol) hamradio.hr...  </P>
 </P>
 
 <P>Not 2:
-Om du finner fel i denna lista, berätta det för mig.
-Jag är också intresserad av EUCW-klubbars hemsidor som inte pekas
-till från denna sida.
+Om du finner fel i denna lista, berÃ¤tta det fÃ¶r mig.
+Jag Ã¤r ocksÃ¥ intresserad av EUCW-klubbars hemsidor som inte pekas
+till frÃ¥n denna sida.
 Skriv till: ... eucw (at-symbol) agcw.de...
 <BR>
-Tack på förhand.</P>
+Tack pÃ¥ fÃ¶rhand.</P>
 
 <P>Not 3: 
-Klubbar som är markerade med brädgård (#) är kandidat-klubbar.
-De kommer att godkännas om det inte finns några invändningar efter en
+Klubbar som Ã¤r markerade med brÃ¤dgÃ¥rd (#) Ã¤r kandidat-klubbar.
+De kommer att godkÃ¤nnas om det inte finns nÃ¥gra invÃ¤ndningar efter en
 given tidsperiod.
 </P>
 
