--- a/eucwa.html
+++ b/eucwa.html
@@ -13,120 +13,120 @@ translated: 2007-05-14
 <TR>
 <TD align="left"><IMG src="imgsclub/hcc.gif" alt=""></TD>
 <TD align="center">
-<H1>Det europeiska CW-förbundet</H1>
-<H2 align="center">Kört EUCW Diplom</H2>
+<H1>Det europeiska CW-fÃ¶rbundet</H1>
+<H2 align="center">KÃ¶rt EUCW Diplom</H2>
 </TD>
 <TD align="right"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 </TR>
 </TABLE>
 <HR>
 <CENTER>
-EUCW är tacksamma gentemot HCC (Hispania CW Club)
-för att de stod för tryckkostnaden för certifikaten
+EUCW Ã¤r tacksamma gentemot HCC (Hispania CW Club)
+fÃ¶r att de stod fÃ¶r tryckkostnaden fÃ¶r certifikaten
 till EUCW-diplomet</CENTER>
 <HR>
 <P><BR>
-<STRONG>Allmänna regler</STRONG><BR>
+<STRONG>AllmÃ¤nna regler</STRONG><BR>
 
-<STRONG>1</STRONG>. Detta prestigfulla diplom är tillgängligt
-för alla licensierade radioamatörer och kortvågslyssnare 
-var som helst i världen.<BR>
+<STRONG>1</STRONG>. Detta prestigfulla diplom Ã¤r tillgÃ¤ngligt
+fÃ¶r alla licensierade radioamatÃ¶rer och kortvÃ¥gslyssnare 
+var som helst i vÃ¤rlden.<BR>
 
-<STRONG>2</STRONG>. Enbart kontakter genomförda efter 
+<STRONG>2</STRONG>. Enbart kontakter genomfÃ¶rda efter 
 den 27:e April 1991,
-(Samuel F.B. Morses tvåhundraåriga födelsedag)
-gäller för detta diplom.<BR>
+(Samuel F.B. Morses tvÃ¥hundraÃ¥riga fÃ¶delsedag)
+gÃ¤ller fÃ¶r detta diplom.<BR>
 
 <STRONG>3</STRONG>.
-Ansökaren skall skicka en lista med kontakter
-(eller hörda SWL-stationer
-[SWL-stationer listar hörda stationer, översättarens anmärkning])
-för vilka QSL-kort mottagits.
-Listan måste vidimeras av en licensierad radioamatör som är
-medlem i en EUCW-klubb och som anger namnet på sin klubb
+AnsÃ¶karen skall skicka en lista med kontakter
+(eller hÃ¶rda SWL-stationer
+[SWL-stationer listar hÃ¶rda stationer, Ã¶versÃ¤ttarens anmÃ¤rkning])
+fÃ¶r vilka QSL-kort mottagits.
+Listan mÃ¥ste vidimeras av en licensierad radioamatÃ¶r som Ã¤r
+medlem i en EUCW-klubb och som anger namnet pÃ¥ sin klubb
 och sitt medlemsskapsnummer.<BR>
 
 <STRONG>4</STRONG>.
-Listan skall innehålla
-datum för kontakten,
-anropssignal på den körda stationen,
+Listan skall innehÃ¥lla
+datum fÃ¶r kontakten,
+anropssignal pÃ¥ den kÃ¶rda stationen,
 band,
-namn på operatören,
+namn pÃ¥ operatÃ¶ren,
 QTH,
 EUCW-klubb,
 klubb medlemsnummer.<BR>
 
 <STRONG>5</STRONG>.
 Se <A href="eucw.html">http://www.scag.se/eucw-sv/eucw.html</A>
-för att hitta en lista med EUCW-klubbar.<BR>
+fÃ¶r att hitta en lista med EUCW-klubbar.<BR>
 
 <STRONG>6</STRONG>.
-Olika certifikat utfärdas för varje klass på diplomet.<BR>
+Olika certifikat utfÃ¤rdas fÃ¶r varje klass pÃ¥ diplomet.<BR>
 
 <STRONG>7</STRONG>.
-Avgiften är EUR 6, USD 8 eller 12 IRS.<BR>
+Avgiften Ã¤r EUR 6, USD 8 eller 12 IRS.<BR>
 
 <STRONG>8</STRONG>.
-Ansökningar för diploment skall skickas till diplomfunktionären:<BR>
-Denna post är för närvarande inte besatt.
-Diplomspekulanter bör sitta på sin ansökan tills dess att
-en ny diplomfunktionär offentliggörs.
-[<a href="#award_manager">Längre ner på sidan</a>
-står det vem diplomfunktionären är.
-Det är f.n. oklart om det är denna information eller informationen
-nedan är gammal. Översättarens anmärkning]<BR>
+AnsÃ¶kningar fÃ¶r diploment skall skickas till diplomfunktionÃ¤ren:<BR>
+Denna post Ã¤r fÃ¶r nÃ¤rvarande inte besatt.
+Diplomspekulanter bÃ¶r sitta pÃ¥ sin ansÃ¶kan tills dess att
+en ny diplomfunktionÃ¤r offentliggÃ¶rs.
+[<a href="#award_manager">LÃ¤ngre ner pÃ¥ sidan</a>
+stÃ¥r det vem diplomfunktionÃ¤ren Ã¤r.
+Det Ã¤r f.n. oklart om det Ã¤r denna information eller informationen
+nedan Ã¤r gammal. Ã–versÃ¤ttarens anmÃ¤rkning]<BR>
 
 <STRONG>9</STRONG>.
-Diplomfunktionärens beslut är slutgiltigt för alla ansökningar.
+DiplomfunktionÃ¤rens beslut Ã¤r slutgiltigt fÃ¶r alla ansÃ¶kningar.
 </P>
 
 <P><BR>
-<STRONG>Krav för diplomet</STRONG><BR>
+<STRONG>Krav fÃ¶r diplomet</STRONG><BR>
 <STRONG>1</STRONG>.
-Bekräftade kontakter på bara telegrafi.
-(Lyssnaramatörer - hörda telegrafistationer)
-med 100 olika stationer som är medlemmar i EUCW-klubbar,
-på tre olika amatörradioband med åtminstone 20 stationer
-körda eller hörda på varje ban.<BR>
+BekrÃ¤ftade kontakter pÃ¥ bara telegrafi.
+(LyssnaramatÃ¶rer - hÃ¶rda telegrafistationer)
+med 100 olika stationer som Ã¤r medlemmar i EUCW-klubbar,
+pÃ¥ tre olika amatÃ¶rradioband med Ã¥tminstone 20 stationer
+kÃ¶rda eller hÃ¶rda pÃ¥ varje ban.<BR>
 
 <STRONG>2</STRONG>. 
-De 100 stationerna körda eller hörda på tre band
-måste inkludera åtminstone tre medlemmar från vardera av sex olika
+De 100 stationerna kÃ¶rda eller hÃ¶rda pÃ¥ tre band
+mÃ¥ste inkludera Ã¥tminstone tre medlemmar frÃ¥n vardera av sex olika
 EUCW-klubbar.<BR>
 
 <STRONG>3</STRONG>.
-Upp till 40 stationer körda eller hörda den 27:de April, 1991,
-på tvåhundraårsdagen av Samuel F.B. Morses födelse,
-kommer att räknas som dubbla kontakter.
-Alla andra krav är oförändrade.</P>
+Upp till 40 stationer kÃ¶rda eller hÃ¶rda den 27:de April, 1991,
+pÃ¥ tvÃ¥hundraÃ¥rsdagen av Samuel F.B. Morses fÃ¶delse,
+kommer att rÃ¤knas som dubbla kontakter.
+Alla andra krav Ã¤r ofÃ¶rÃ¤ndrade.</P>
 
 <P><BR>
 <STRONG>Diplomets klasser</STRONG><BR>
 
 <STRONG>a</STRONG>) <STRONG>Vanliga diplomet</STRONG> -
-100 tvåvägskontakter genomförda med tillåten sändningseffekt.<BR>
+100 tvÃ¥vÃ¤gskontakter genomfÃ¶rda med tillÃ¥ten sÃ¤ndningseffekt.<BR>
 
 <STRONG>b</STRONG>) <STRONG>QRP diplomet</STRONG> -
-100 tvåvägskontakter genomföra då ansökaren inte använder
-mer än 5 warr r.f. uteffekt.<BR>
+100 tvÃ¥vÃ¤gskontakter genomfÃ¶ra dÃ¥ ansÃ¶karen inte anvÃ¤nder
+mer Ã¤n 5 warr r.f. uteffekt.<BR>
 
-<STRONG>c</STRONG>) <STRONG>Lyssnaramatördiplomet</STRONG> -
-100 hörda stationer oavsett effekt.</P>
+<STRONG>c</STRONG>) <STRONG>LyssnaramatÃ¶rdiplomet</STRONG> -
+100 hÃ¶rda stationer oavsett effekt.</P>
 
 <P><STRONG>Certifikat<BR></STRONG>
-De attraktiva diplomcertifikaten är tryckta på tungt papper
+De attraktiva diplomcertifikaten Ã¤r tryckta pÃ¥ tungt papper
 av pergamenttyp och har en bild av Europa 
-"på Samuel F.B. Morses tid".</P>
+"pÃ¥ Samuel F.B. Morses tid".</P>
 
-<P>Klicka <A href="imgsdpl/eucwa.gif">här</A>
-för att se diplomets utseende.</P>
+<P>Klicka <A href="imgsdpl/eucwa.gif">hÃ¤r</A>
+fÃ¶r att se diplomets utseende.</P>
 
-<P><a name="award_manager">EUCWdiplomfunktionär</a>:<BR>
+<P><a name="award_manager">EUCWdiplomfunktionÃ¤r</a>:<BR>
 DK7VW, Werner 'Joe' Jochem, Wendelsborn 34, D-66606 St. Wendel,
 E-mail:...joe (at-symbol) dk7vw.de...</P>
 <HR>
 
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
