--- a/eucwh.html
+++ b/eucwh.html
@@ -10,11 +10,11 @@ translated: 2007-05-14
 <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink= 
 "purple">
 <img src="imgs/eucwflag.gif" alt="">
-<h1>Europeiska CW-förbundets historia</h1>
+<h1>Europeiska CW-fÃ¶rbundets historia</h1>
 
-Senast reviderad 2000-06-14 [Detta kan inte stämma eftersom det är daterat 2007 nedan. Översättarens anmärkning.]
+Senast reviderad 2000-06-14 [Detta kan inte stÃ¤mma eftersom det Ã¤r daterat 2007 nedan. Ã–versÃ¤ttarens anmÃ¤rkning.]
 
-<h2>EUCWs ordföranden</h2>
+<h2>EUCWs ordfÃ¶randen</h2>
 
 <ol>
 <li><img src="flags/se.gif" alt=""> SM&Oslash;IX Sven Milander c/o
@@ -45,7 +45,7 @@ SHSC/EHSC (*) 1991-2006 </li>
 c/o LZCWC sedan 2007</li>
 </ol>
 
-<h2>EUCWs tillväxthistoria (datum då klubbar gick med)</h2>
+<h2>EUCWs tillvÃ¤xthistoria (datum dÃ¥ klubbar gick med)</h2>
 
 <dl>
 <dt> 1979</dt>
@@ -140,18 +140,18 @@ c/o LZCWC sedan 2007</li>
 
 </dl>
 
-<h2> Andra händelser i EUCW</h2>
+<h2> Andra hÃ¤ndelser i EUCW</h2>
 
 <dl>
 <dt> 1978</dt>
 
 <dd>
-SCAG tog det första initiativet.
-Stadgarna föreslogs den 1978-06-27
-(dessa stadgar är återgivna i SCAG-NL nummer 50 från April 1978).
-Enligt dessa stadgar är det bara klubbar med åtminstone
+SCAG tog det fÃ¶rsta initiativet.
+Stadgarna fÃ¶reslogs den 1978-06-27
+(dessa stadgar Ã¤r Ã¥tergivna i SCAG-NL nummer 50 frÃ¥n April 1978).
+Enligt dessa stadgar Ã¤r det bara klubbar med Ã¥tminstone
 100 medlemmar kan bli medlem.
-Ledarskapet i EUCW skall rotera årligen.
+Ledarskapet i EUCW skall rotera Ã¥rligen.
 </dd>
 
 <dt> 1979</dt>
@@ -162,33 +162,33 @@ Ledarskapet i EUCW skall rotera årligen.
 
 <dd>
 CWC (HB9) togs bort 1986-02-15. 
-SCAGs ledning föreslår SCAGs utträde ur EUCW (1986-03-01)
-att tas upp på årsmötet.
-1986.05.31: SCAGs årsmöte i Köpenhamn fördröjer beslutet om EUCW-utträde.
-DL6MK får problem att hitta en ny EUCW-ledare.
-TOPS, SARS, HCC, INORC kan inte ta över ledarskapet.
-UFT föreslår ett EUCW-diplom.
+SCAGs ledning fÃ¶reslÃ¥r SCAGs uttrÃ¤de ur EUCW (1986-03-01)
+att tas upp pÃ¥ Ã¥rsmÃ¶tet.
+1986.05.31: SCAGs Ã¥rsmÃ¶te i KÃ¶penhamn fÃ¶rdrÃ¶jer beslutet om EUCW-uttrÃ¤de.
+DL6MK fÃ¥r problem att hitta en ny EUCW-ledare.
+TOPS, SARS, HCC, INORC kan inte ta Ã¶ver ledarskapet.
+UFT fÃ¶reslÃ¥r ett EUCW-diplom.
 </dd>
 
 <dt> 1987</dt>
 
-<dd>DJ2XP tar över EUCW FP-aktiviteten.
-Datum för FP ändras från Juni till sent i November.
-1987-04-25: SCAGs årsmöte i Täby överger planerna på ett utträde ur EUCW.
+<dd>DJ2XP tar Ã¶ver EUCW FP-aktiviteten.
+Datum fÃ¶r FP Ã¤ndras frÃ¥n Juni till sent i November.
+1987-04-25: SCAGs Ã¥rsmÃ¶te i TÃ¤by Ã¶verger planerna pÃ¥ ett uttrÃ¤de ur EUCW.
 </dd>
 
 <dt> 1988</dt>
 
 <dd>
-GQRPs nybörjardiplomet får status som en officiell EUCW-aktivitet.
-EUCW-nätet (80 m QTC-nät) är igång sedan i september.
+GQRPs nybÃ¶rjardiplomet fÃ¥r status som en officiell EUCW-aktivitet.
+EUCW-nÃ¤tet (80 m QTC-nÃ¤t) Ã¤r igÃ¥ng sedan i september.
 </dd>
 
 <dt> 1990</dt>
 <dd>
 TOPS drar tillbaka sitt medlemsskap p.g.a. brist i aktivitet (1990-07-01),
-möjligheten att gå med igen finns kvar.
-Broderskapliga länkar till icke-europeiska klubbar skapas:
+mÃ¶jligheten att gÃ¥ med igen finns kvar.
+Broderskapliga lÃ¤nkar till icke-europeiska klubbar skapas:
 QRP-ARCI (W/K) och
 GPCW (PY).
 SCAGs Straight Key Day (Handpumpsdagen) blir en officiell EUCW-aktivitet.
@@ -197,39 +197,39 @@ SCAGs Straight Key Day (Handpumpsdagen) blir en officiell EUCW-aktivitet.
 <dt> 1991</dt>
 
 <dd>
-Worked EUCW Award (Kört EUCW-diplomet) skapades (1991-04-27) i åminnelse
-av Samuel F.B. Morses 200 åriga födelsedag.
-HCC (Spanien) stod för tryckkostnaden (i Storbrittanien) för diplomen,
+Worked EUCW Award (KÃ¶rt EUCW-diplomet) skapades (1991-04-27) i Ã¥minnelse
+av Samuel F.B. Morses 200 Ã¥riga fÃ¶delsedag.
+HCC (Spanien) stod fÃ¶r tryckkostnaden (i Storbrittanien) fÃ¶r diplomen,
 som designades av G4FAI.
-Den första som erövrade diplomet var: DK9EA (1991-09-30).
-Generösa donationer som mottogs från andra klubbar reserverades för
+Den fÃ¶rsta som erÃ¶vrade diplomet var: DK9EA (1991-09-30).
+GenerÃ¶sa donationer som mottogs frÃ¥n andra klubbar reserverades fÃ¶r
 framtida speciella projekt.
-CWAS (PY) blir en till långväga gäst. Den ta över GPCWs (PY) uppgifter.
+CWAS (PY) blir en till lÃ¥ngvÃ¤ga gÃ¤st. Den ta Ã¶ver GPCWs (PY) uppgifter.
 </dd>
 
 <dt> 1992</dt>
 
 <dd>
-Medlemsskapsreglerna förändrades för att ge möjlighet för små klubbar.
+Medlemsskapsreglerna fÃ¶rÃ¤ndrades fÃ¶r att ge mÃ¶jlighet fÃ¶r smÃ¥ klubbar.
 Beslutet togs med brev-votering.
-18 klubbar bjöds in att rösta,
-13 var för förändringen,
+18 klubbar bjÃ¶ds in att rÃ¶sta,
+13 var fÃ¶r fÃ¶rÃ¤ndringen,
 en (1) emot,
-en (1) för med villkor och
+en (1) fÃ¶r med villkor och
 tre (3) klubbar svarade inte.
 </dd>
 
 <dt> 1993</dt>
 
 <dd>
-SLDXC (Saar-Lorraine DX club) ansökte om medlemsskap men det användes
-ett veto mot den eftersom den är frågan om en DX-klubb snarare än en CW-klubb.
-Det etablerades en väldefinierad policy för medlemsskapsansökan,
+SLDXC (Saar-Lorraine DX club) ansÃ¶kte om medlemsskap men det anvÃ¤ndes
+ett veto mot den eftersom den Ã¤r frÃ¥gan om en DX-klubb snarare Ã¤n en CW-klubb.
+Det etablerades en vÃ¤ldefinierad policy fÃ¶r medlemsskapsansÃ¶kan,
 alla icke-CW-klubbar och alla icke-europeiska klubbar kommer att tas
-bort under ansökningsförfarandet.
-QRP-klubbar kommer att förbli ett undantag eftersom QRP är nära besläktat
+bort under ansÃ¶kningsfÃ¶rfarandet.
+QRP-klubbar kommer att fÃ¶rbli ett undantag eftersom QRP Ã¤r nÃ¤ra beslÃ¤ktat
 med telegrafi.
-EUCW FP-aktiviteten får en sponsor till i EA3DOS som donerar miniatyrnycklar
+EUCW FP-aktiviteten fÃ¥r en sponsor till i EA3DOS som donerar miniatyrnycklar
 ("Lilliput") till vinnarna.
 </dd>
 
@@ -237,50 +237,50 @@ EUCW FP-aktiviteten får en sponsor till i EA3DOS som donerar miniatyrnycklar
 
 <dd>
 Nya stadgar antogs.
-Bland ändringarna finns:
-Klubbar med åtminstone 100 medlemmar kommer att ha fullt
-(dvs. röstberättigat) medlemsskap.
-Klubbar med fem (5) till 99 medlemmar kommar att ha begränsat 
-(dvs. icke-röstberättigat) medlemsskap.
-Ordförandens mandatperiod är tre (3) år.
+Bland Ã¤ndringarna finns:
+Klubbar med Ã¥tminstone 100 medlemmar kommer att ha fullt
+(dvs. rÃ¶stberÃ¤ttigat) medlemsskap.
+Klubbar med fem (5) till 99 medlemmar kommar att ha begrÃ¤nsat 
+(dvs. icke-rÃ¶stberÃ¤ttigat) medlemsskap.
+OrdfÃ¶randens mandatperiod Ã¤r tre (3) Ã¥r.
 </dd>
 
 <dt> 2000</dt>
 
 <dd>
-Medlemsskapsansökan från CW-C-UFRC (Belgien) publicerat i
+MedlemsskapsansÃ¶kan frÃ¥n CW-C-UFRC (Belgien) publicerat i
 EUCW Bulletin 2000/2.
-Även GACW från Argentina erbjöd samarbete med EUCW.
-Förslag till en ny konstitution.
+Ã„ven GACW frÃ¥n Argentina erbjÃ¶d samarbete med EUCW.
+FÃ¶rslag till en ny konstitution.
 </dd>
  
 <dt> 2001</dt>
  
 <dd>
-CW-C-UFRC (Belgien) ändrade namn till CFT.
-FISTS skänker en EUCWs QRS-vecka till att bli en ny EUCW-aktivitet.
-Första QRS-veckan hålls i april 2001.
-UFT dedikerar en 160m-tävling till EUCW.
+CW-C-UFRC (Belgien) Ã¤ndrade namn till CFT.
+FISTS skÃ¤nker en EUCWs QRS-vecka till att bli en ny EUCW-aktivitet.
+FÃ¶rsta QRS-veckan hÃ¥lls i april 2001.
+UFT dedikerar en 160m-tÃ¤vling till EUCW.
 </dd>
 
 <dt> 2002</dt>
  
 <dd>
 Professional Radio Operators CW Club International 
-(Den internationella telegrafiklubben för professionella operatörer)
-från Rumänien
-ansökte om medlemsskap men fick veto.
+(Den internationella telegrafiklubben fÃ¶r professionella operatÃ¶rer)
+frÃ¥n RumÃ¤nien
+ansÃ¶kte om medlemsskap men fick veto.
 </dd>
 
 <dt> 2006</dt>
 
 <dd>
-DJ2XP pensionerade sig från sin post som
+DJ2XP pensionerade sig frÃ¥n sin post som
 EUCW-diplom- och 
 EUCW FP-aktivitetsansvarig.
-Dessa arbeten togs över av DK7VW.
-Oturlingt nog försvann resultaten från 2005 års EUCW FP-aktiviteten
-under övertagandet.
+Dessa arbeten togs Ã¶ver av DK7VW.
+Oturlingt nog fÃ¶rsvann resultaten frÃ¥n 2005 Ã¥rs EUCW FP-aktiviteten
+under Ã¶vertagandet.
 </dd>
 
 </dl>
@@ -288,24 +288,24 @@ under övertagandet.
 <p>Not:</p>
 
 <p>
-Denna lista baseras på mitt arkiv med AGCW-Info och SCAG-NL från
+Denna lista baseras pÃ¥ mitt arkiv med AGCW-Info och SCAG-NL frÃ¥n
 80-talet och mitt EUCW-bulletinarkiv som startade 1991.
-Flera vänner har hjälpt till att förbättra informationen,
+Flera vÃ¤nner har hjÃ¤lpt till att fÃ¶rbÃ¤ttra informationen,
 se listan nedan.
-Trots det är listan inkomplett och kan innehålla felaktigheter.
-Sänd rättelser och ytterligare information till:
+Trots det Ã¤r listan inkomplett och kan innehÃ¥lla felaktigheter.
+SÃ¤nd rÃ¤ttelser och ytterligare information till:
 ... eucw (at) agcw.de ...
-Tack på förhand.
+Tack pÃ¥ fÃ¶rhand.
 </p>
 
-<p>(*) ON5ME stod för alla omkostnade för ordförandeskapet under 
-hela sin tid som ordförande, dvs. EUCW-medlen för ledningen har
-bara används för att täcka kostnader åt andra EUCW-funktionärer.
+<p>(*) ON5ME stod fÃ¶r alla omkostnade fÃ¶r ordfÃ¶randeskapet under 
+hela sin tid som ordfÃ¶rande, dvs. EUCW-medlen fÃ¶r ledningen har
+bara anvÃ¤nds fÃ¶r att tÃ¤cka kostnader Ã¥t andra EUCW-funktionÃ¤rer.
 Tack Oscar.
 </p>
 
-<p>Listan med personer som hjälpt till i historiebeskrivningen:<br>
-Rättningar och uppdateringar har kommit från:
+<p>Listan med personer som hjÃ¤lpt till i historiebeskrivningen:<br>
+RÃ¤ttningar och uppdateringar har kommit frÃ¥n:
 PA&Oslash;DIN,
 ON5ME,
 DK5KE,
