--- a/eunov.html
+++ b/eunov.html
@@ -3,7 +3,7 @@ translated: 2007-05-14
 ---
 <html>
 <head>
-<title>EUCWs nybörjardiplom</title>
+<title>EUCWs nybÃ¶rjardiplom</title>
 <LINK REL="SHORTCUT ICON" HREF="imgs/eucw.ico">
 </head>
 <BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
@@ -11,42 +11,42 @@ translated: 2007-05-14
 <tr>
 <td align="LEFT"><img src="imgsclub/gqrp.gif" alt=""></td>
 <td align="CENTER">
-<h1> Det europeiska CW-förbundet</h1>
-<h2 align="center">EUCWs Nybörjardiplom</h2>
+<h1> Det europeiska CW-fÃ¶rbundet</h1>
+<h2 align="center">EUCWs NybÃ¶rjardiplom</h2>
 </td>
 <td align="RIGHT"><img src="imgs/eucwflag.gif" alt=""></td>
 </tr>
 </table>
-<p align="left"><strong>Tillgänglighet</strong><br>
-Detta diplom är tillgängligt för alla radioamatörer som,
-under de första 12 månaderna som han har en amatörradiolicens
-kontaktar 50 olika stationer på telegrafi och får QSL-kort
-från dessa.
-<strong>Den som ansöker behöver inte vara medlem i någon
-EUCW-klubb för att vara kvalificerad för
-EUCWs Nybörjardiplom.</strong>
+<p align="left"><strong>TillgÃ¤nglighet</strong><br>
+Detta diplom Ã¤r tillgÃ¤ngligt fÃ¶r alla radioamatÃ¶rer som,
+under de fÃ¶rsta 12 mÃ¥naderna som han har en amatÃ¶rradiolicens
+kontaktar 50 olika stationer pÃ¥ telegrafi och fÃ¥r QSL-kort
+frÃ¥n dessa.
+<strong>Den som ansÃ¶ker behÃ¶ver inte vara medlem i nÃ¥gon
+EUCW-klubb fÃ¶r att vara kvalificerad fÃ¶r
+EUCWs NybÃ¶rjardiplom.</strong>
 </p>
 
 <p><strong>Diplomets klasser</strong><br>
 <strong>Klass A</strong> - 
-QRP måste användas och den som ansöker måste bifoga 
-till sin ansökan
-ett underskrivet uttalande att effekten som användes för 
-att genomföra kontakterna inte översteg 5W.
+QRP mÃ¥ste anvÃ¤ndas och den som ansÃ¶ker mÃ¥ste bifoga 
+till sin ansÃ¶kan
+ett underskrivet uttalande att effekten som anvÃ¤ndes fÃ¶r 
+att genomfÃ¶ra kontakterna inte Ã¶versteg 5W.
 <br>
 
-<strong>Klass B</strong> - Vilken effekt som helst kan användas </p>
+<strong>Klass B</strong> - Vilken effekt som helst kan anvÃ¤ndas </p>
 
-<p><strong>Ansökningar</strong><br>
-För att få diploment, skicka en log av de 50 genomförda kontakterna,
-som verifieras av en annan licensierad radioamatör intygande att
-han har sett och kontrollerat korten på listan.
-Ansökarens eget namn och address måste framgå tydligt av ansökan.
+<p><strong>AnsÃ¶kningar</strong><br>
+FÃ¶r att fÃ¥ diploment, skicka en log av de 50 genomfÃ¶rda kontakterna,
+som verifieras av en annan licensierad radioamatÃ¶r intygande att
+han har sett och kontrollerat korten pÃ¥ listan.
+AnsÃ¶karens eget namn och address mÃ¥ste framgÃ¥ tydligt av ansÃ¶kan.
 <strong>Skicka inte QSL-korten.</strong><br>
 
-Skicka begäran, tillsammans med 
-tre "first class"-frimärken (för ansökande från Storbrittanien), eller
-tre IRCs för övriga till:
+Skicka begÃ¤ran, tillsammans med 
+tre "first class"-frimÃ¤rken (fÃ¶r ansÃ¶kande frÃ¥n Storbrittanien), eller
+tre IRCs fÃ¶r Ã¶vriga till:
 </p>
 
 <p><strong>G-QRPC Awards Manager,<br>
@@ -56,15 +56,15 @@ Greasby, Merseyside CH49 3ND,<br>
 England.</strong><br>
 <br>
 <HR>
-Tillhandahållandet av EUCWs Nybörjardiplom är ett bidrag från
-G-QRP klubben till de aktiviteter som Europeiska CW-förbundet,
-som finns till för att marknadsföra och uppmuntra amatörradiotelegrafi
-genom ömsesidigt samarbete och aktiviteter i medlemsklubbarna.<br>
+TillhandahÃ¥llandet av EUCWs NybÃ¶rjardiplom Ã¤r ett bidrag frÃ¥n
+G-QRP klubben till de aktiviteter som Europeiska CW-fÃ¶rbundet,
+som finns till fÃ¶r att marknadsfÃ¶ra och uppmuntra amatÃ¶rradiotelegrafi
+genom Ã¶msesidigt samarbete och aktiviteter i medlemsklubbarna.<br>
 <HR>
-Klicka <A HREF="imgsdpl/eunov.gif">här</A>
-för att se diplomets utseende.
+Klicka <A HREF="imgsdpl/eunov.gif">hÃ¤r</A>
+fÃ¶r att se diplomets utseende.
 <P>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
