--- a/euskd.html
+++ b/euskd.html
@@ -6,15 +6,15 @@
     <title>EUCW info hos SCAG</title>
   </head>
   <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
-    <h1>Sidan är ännu ej översatt!</h1>
+    <h1>Sidan Ã¤r Ã¤nnu ej Ã¶versatt!</h1>
     <p>
-Denna sida är ännu inte översatt till svenska.
-Om en liten stund förflyttas du därför automatiskt till
+Denna sida Ã¤r Ã¤nnu inte Ã¶versatt till svenska.
+Om en liten stund fÃ¶rflyttas du dÃ¤rfÃ¶r automatiskt till
 <a href="http://www.agcw.org/eucw/d/euskd.html">
 http://www.agcw.org/eucw/d/euskd.html
 </a>
-(på tyska)
-som är den icke översatta versionen av samma sida.
+(pÃ¥ tyska)
+som Ã¤r den icke Ã¶versatta versionen av samma sida.
     </p>
   </body>
 </html>
