--- a/fists.html
+++ b/fists.html
@@ -8,27 +8,27 @@ translated: 2007-05-14
 <HR>
 <P>
 <b>FISTS</b> - The International Morse Preservation Society
-(Den internationella sammanslutningen för morse-telegrafins bevarande)
+(Den internationella sammanslutningen fÃ¶r morse-telegrafins bevarande)
 <P>
 Motto: Where Fists Make Friends.
-(Där FISTS (= knytnävar) blir vänner)
+(DÃ¤r FISTS (= knytnÃ¤var) blir vÃ¤nner)
 <P>
-Detta är en världsomspännande telegrafiklubb som grundades i Storbrittanien.
-Den är öppen för alla telegrafientusiaster och har ett urval av aktiviteter
+Detta Ã¤r en vÃ¤rldsomspÃ¤nnande telegrafiklubb som grundades i Storbrittanien.
+Den Ã¤r Ã¶ppen fÃ¶r alla telegrafientusiaster och har ett urval av aktiviteter
 som innefattar diplom, tester och en skriftlig bulletin som heter 
 Key Notes (nyckelanteckningar eller viktiga anteckningar).
 <P>
 <a href=" http://www.fists.co.uk/">
-<img src="flags/uk.gif" ALT="U.K. "> Klicka här </a> 
-för att se den brittiska grenens website.
+<img src="flags/uk.gif" ALT="U.K. "> Klicka hÃ¤r </a> 
+fÃ¶r att se den brittiska grenens website.
 <P>
 <a href="http://www.fists.org"> 
-<img src="flags/us.gif" ALT="U.S. "> Klicka här </a>
-för att se den amerikanska grenens website.
+<img src="flags/us.gif" ALT="U.S. "> Klicka hÃ¤r </a>
+fÃ¶r att se den amerikanska grenens website.
 
 <BR CLEAR=LEFT></P>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
