--- a/foc.html
+++ b/foc.html
@@ -8,20 +8,20 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://www.firstclasscw.org.uk"><b>FOC:</b></a>
 <b>F</b>irst Class <b>O</b>perators <b>C</b>lub
-(Klubben för operatörer av första klass)<BR>
-<br>Vad är FOC?
+(Klubben fÃ¶r operatÃ¶rer av fÃ¶rsta klass)<BR>
+<br>Vad Ã¤r FOC?
 <br>
-FOC är en telegrafiklubb som är baserad i Storbrittanien
+FOC Ã¤r en telegrafiklubb som Ã¤r baserad i Storbrittanien
 och som grundades 1938.
-Klubben har begränsat sitt medlemsskap till 500 medlemmar i världen.
-Klubben strävar efter hög kvalitet under radioaktiviteterna,
+Klubben har begrÃ¤nsat sitt medlemsskap till 500 medlemmar i vÃ¤rlden.
+Klubben strÃ¤var efter hÃ¶g kvalitet under radioaktiviteterna,
 kombinerat med att leva ett socialt liv,
-både i luften och tillsammans med familjen och medlemmar vid olika
-evenemang i världen.
+bÃ¥de i luften och tillsammans med familjen och medlemmar vid olika
+evenemang i vÃ¤rlden.
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
