--- a/gacw.html
+++ b/gacw.html
@@ -10,27 +10,27 @@ translated: 2007-05-14
 Grupo Argentino de CW (Argentinska telegrafigruppen)
 </A>
 <P>
-Telegrafiklubb från Argentina som grundades 1977.
-Aktiviteterna omfattar en tävling (tredje söndagen i juni)
-och regelbundna DX-peditioner, speciellt till de antarktiska öarna
-och till LU-provinser med få telegrafioperatörer.
-De provinser du kan vilja köra är:
+Telegrafiklubb frÃ¥n Argentina som grundades 1977.
+Aktiviteterna omfattar en tÃ¤vling (tredje sÃ¶ndagen i juni)
+och regelbundna DX-peditioner, speciellt till de antarktiska Ã¶arna
+och till LU-provinser med fÃ¥ telegrafioperatÃ¶rer.
+De provinser du kan vilja kÃ¶ra Ã¤r:
 <P>
 LU#A-C Bs. Aires Capital Federal<BR>
 LU#D,E Bs. Aires Provincia<BR>
 LU#F Santa Fe<BR>
 LU#GA-GO Chaco<BR>
 LU#GP-GZ Formosa<BR>
-LU#H Córboba<BR>
+LU#H CÃ³rboba<BR>
 LU#I Misiones <BR>
 LU#J Entre Rios<BR>
-LU#K Tucumán<BR>
+LU#K TucumÃ¡n<BR>
 LU#L Corrientes<BR>
 LU#M Mendoza <BR>
 LU#N Santiago del Estero<BR>
 LU#O Salta<BR>
 LU#P San Juan<BR>
-LU#Q San Luís<BR>
+LU#Q San LuÃ­s<BR>
 LU#R Catamarca<BR>
 LU#S La Rioja<BR>
 LU#T Jujuy<BR>
@@ -39,14 +39,14 @@ LU#V Rio Negro<BR>
 LU#W Chubut <BR>
 LU#XA-XO Santa Cruz<BR>
 LU#XP-XZ Tierra del Fuego <BR>
-LU#Z Antártida/Islas del Sur<BR>
+LU#Z AntÃ¡rtida/Islas del Sur<BR>
 <P>
 Adress:
 GACW, Casilla de Correo 9, 1875 Wilde, Buenos Aires, Argentina
 E-mail:...gacw (AT-SYMBOL) lan.no-ip.org...
 <P>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
