--- a/gqrp.html
+++ b/gqrp.html
@@ -9,14 +9,14 @@ translated: 2007-05-14
 <A HREF="http://www.gqrp.com/">
 <b> G-QRP Club:</b> (Klubben G-QRP)</A> 
 <BR>
-Ägnad åt lågeffektförbindelser (upp till 5 watt likströmsinput).
-Klubben har tusentals medlemmar i hela världen och erbjuder ett
-brett spann av tjäsnter och aktiviteter däribland
+Ã„gnad Ã¥t lÃ¥geffektfÃ¶rbindelser (upp till 5 watt likstrÃ¶msinput).
+Klubben har tusentals medlemmar i hela vÃ¤rlden och erbjuder ett
+brett spann av tjÃ¤snter och aktiviteter dÃ¤ribland
 en mycket bra klubbtidning
-som alla hemmabyggare kommer att tycka är mycket intressant.
+som alla hemmabyggare kommer att tycka Ã¤r mycket intressant.
 <BR CLEAR=LEFT></P>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
