--- a/gtc.html
+++ b/gtc.html
@@ -18,7 +18,7 @@ translated: 2007-05-14
 C</b>lub (Grekiska telegrafiklubben)</p>
 
 <p>
-Följande brev skickades ut i telegrafivärlden för att presentera klubben.
+FÃ¶ljande brev skickades ut i telegrafivÃ¤rlden fÃ¶r att presentera klubben.
 <BR CLEAR=LEFT>
 </p>
 <P ALIGN="CENTER">
@@ -26,115 +26,115 @@ Grekiska telegrafiklubben<br>
 (SV-CW-C) (Sedan 1998)<br>
 en medlem i EUCW<br>
 <b>HELLINIKI LESHI TILEGRAFIAS</b><br>
-** MÅL, STADGAR och REGLER **<br>
+** MÃ…L, STADGAR och REGLER **<br>
 </P>
 <P ALIGN="LEFT">
 Aten, 3dje november 1998
 </P>
 <P ALIGN="LEFT">
-Kära telegrafivänner i hela världen...
+KÃ¤ra telegrafivÃ¤nner i hela vÃ¤rlden...
 </P>
 <P ALIGN="LEFT">
 Den grekiska telegrafiklubben grundades i oktober 1998
-som en oberoende grekisk klub och vill åstadkomma:
+som en oberoende grekisk klub och vill Ã¥stadkomma:
 </P>
 <P ALIGN="LEFT">
-Att marknadsföra användningen av telegrafi på amatörradiobanden,
-att uppmuntra nykomlingar på telegrafi och
-att uppmuntra och bibehålla vänskap hos radiotelegrafioperatörer.
+Att marknadsfÃ¶ra anvÃ¤ndningen av telegrafi pÃ¥ amatÃ¶rradiobanden,
+att uppmuntra nykomlingar pÃ¥ telegrafi och
+att uppmuntra och bibehÃ¥lla vÃ¤nskap hos radiotelegrafioperatÃ¶rer.
 </P>
 <P ALIGN="LEFT">
-GTC är också ett starkt tryck mot de krafter som vill utrota telegrafi
-som en amatörradiokommunikationsmod.
+GTC Ã¤r ocksÃ¥ ett starkt tryck mot de krafter som vill utrota telegrafi
+som en amatÃ¶rradiokommunikationsmod.
 </P>
 <P ALIGN="LEFT">
-Innan vi bestämde oss för att samlas i en telegrafiklubb i vårt land,
-sökte vi under flera år efter vad grupper och organisationer
-med liknande mål gjort i Europa och på andra ställen och slutligen
-gjorde vi det för att stödja och dela den gemensamma kampen att
-marknadsföra, skydd och försvara telegrafins, särskilt under nuvarande
-omständigheter.
+Innan vi bestÃ¤mde oss fÃ¶r att samlas i en telegrafiklubb i vÃ¥rt land,
+sÃ¶kte vi under flera Ã¥r efter vad grupper och organisationer
+med liknande mÃ¥l gjort i Europa och pÃ¥ andra stÃ¤llen och slutligen
+gjorde vi det fÃ¶r att stÃ¶dja och dela den gemensamma kampen att
+marknadsfÃ¶ra, skydd och fÃ¶rsvara telegrafins, sÃ¤rskilt under nuvarande
+omstÃ¤ndigheter.
 </P>
 <P ALIGN="LEFT">
-Här i SV-landet, är huvuddelen av amatörerna fortfarande långt ifrån
-tankarna att inte kräva telegrafi vid amatörradioproven,
-men eftersom saker kan ändras snabbt,
-vill vi samla tillräckligt med styrka för att kämpa emot alla
-nuvarande och framtida hot mot vår älskade telegrafi.
+HÃ¤r i SV-landet, Ã¤r huvuddelen av amatÃ¶rerna fortfarande lÃ¥ngt ifrÃ¥n
+tankarna att inte krÃ¤va telegrafi vid amatÃ¶rradioproven,
+men eftersom saker kan Ã¤ndras snabbt,
+vill vi samla tillrÃ¤ckligt med styrka fÃ¶r att kÃ¤mpa emot alla
+nuvarande och framtida hot mot vÃ¥r Ã¤lskade telegrafi.
 </P>
 <P ALIGN="LEFT">
-Även om Grekland är ett litet land finns det ett stort antal
-mycket erfarna telegrafioperatörer som under många år har varit
-till sjöss som radiooperatörer, i handelsflottan,
-som fortfarande idag är en av de största flottorna i världen.
+Ã„ven om Grekland Ã¤r ett litet land finns det ett stort antal
+mycket erfarna telegrafioperatÃ¶rer som under mÃ¥nga Ã¥r har varit
+till sjÃ¶ss som radiooperatÃ¶rer, i handelsflottan,
+som fortfarande idag Ã¤r en av de stÃ¶rsta flottorna i vÃ¤rlden.
 </P>
 <P ALIGN="LEFT">
-Idag är många av dem radioamatörer,
-och telegrafioperatörer på amatörradiobanden,
-använder radiovågorna,
-och har kul när de kör sin favoritmod.
+Idag Ã¤r mÃ¥nga av dem radioamatÃ¶rer,
+och telegrafioperatÃ¶rer pÃ¥ amatÃ¶rradiobanden,
+anvÃ¤nder radiovÃ¥gorna,
+och har kul nÃ¤r de kÃ¶r sin favoritmod.
 </P>
 <P ALIGN="LEFT">
-Lyckligtvis för oss finns det också ett stort antal nykomlingar
-som blir förälskade i morsekod.
-Vi tycker att det är en mycket viktig plikt för alla de gamla att
-hålla dessa i ständig kontakt med telegrafi,
-som en grundläggande sak i amatörradiovärlden.
+Lyckligtvis fÃ¶r oss finns det ocksÃ¥ ett stort antal nykomlingar
+som blir fÃ¶rÃ¤lskade i morsekod.
+Vi tycker att det Ã¤r en mycket viktig plikt fÃ¶r alla de gamla att
+hÃ¥lla dessa i stÃ¤ndig kontakt med telegrafi,
+som en grundlÃ¤ggande sak i amatÃ¶rradiovÃ¤rlden.
 </P>
 <P ALIGN="LEFT">
-På ett möte vi hade för några dagar sedan,
-diskuterade vi frågor om diplom, tävlingar, websidebyggande mm och
-nu kan vi säga att många dessa saker kommer att lösas på ett bra sätt.
+PÃ¥ ett mÃ¶te vi hade fÃ¶r nÃ¥gra dagar sedan,
+diskuterade vi frÃ¥gor om diplom, tÃ¤vlingar, websidebyggande mm och
+nu kan vi sÃ¤ga att mÃ¥nga dessa saker kommer att lÃ¶sas pÃ¥ ett bra sÃ¤tt.
 </P>
 <P ALIGN="LEFT">
-För närvarande, som en ny systerklubb, kommer vi att deltaga i de
-aktiviteter som finns tillgängliga i EUCW-klubbarna, (dvs. tävlingar etc),
-och göra vårt bästa för att de aktiviteterna skall få framgång.
-[Språket är i detta stycke ganska egendomligt.
-Jag har försökt återskapa det jag tror menas men jag kan ha misstolkat.
-Översättarens anmärkning.]
+FÃ¶r nÃ¤rvarande, som en ny systerklubb, kommer vi att deltaga i de
+aktiviteter som finns tillgÃ¤ngliga i EUCW-klubbarna, (dvs. tÃ¤vlingar etc),
+och gÃ¶ra vÃ¥rt bÃ¤sta fÃ¶r att de aktiviteterna skall fÃ¥ framgÃ¥ng.
+[SprÃ¥ket Ã¤r i detta stycke ganska egendomligt.
+Jag har fÃ¶rsÃ¶kt Ã¥terskapa det jag tror menas men jag kan ha misstolkat.
+Ã–versÃ¤ttarens anmÃ¤rkning.]
 </P>
 <P ALIGN="LEFT">
-Vi vill också skapa goda relationer med ett ärligt och öppet samarbete,
-och nära kontakter mellan GTC (SV-CW-C) och stora EUCW-klubbar som,
+Vi vill ocksÃ¥ skapa goda relationer med ett Ã¤rligt och Ã¶ppet samarbete,
+och nÃ¤ra kontakter mellan GTC (SV-CW-C) och stora EUCW-klubbar som,
 Deutscher Telegraphy Club e.V. (DL-CW-C) (Tyska telegrafiklubben),
 Activity Group Telegrafie e.V. (AGCW-DL),
 FISTS,
 Union Francaise Telegrafie (UFT) (Franska telegrafiunionen),
 Italian Telegraphy Club (Italienska telegrafiklubben) och
 andra,
-i syfte att förstärka och föra fram
-vår gemensamma marknadsföring av våra mål.
+i syfte att fÃ¶rstÃ¤rka och fÃ¶ra fram
+vÃ¥r gemensamma marknadsfÃ¶ring av vÃ¥ra mÃ¥l.
 </P>
 <P ALIGN="LEFT">
 GTC representerar telegrafins intressen i Grekland,
 genom dess samarbete med
-RAAG (Radio Amateur Assn of Greece) (den grekiska amatörradioföreningen),
-och också alla andra redan existerande mindre SV-klubbar.
+RAAG (Radio Amateur Assn of Greece) (den grekiska amatÃ¶rradiofÃ¶reningen),
+och ocksÃ¥ alla andra redan existerande mindre SV-klubbar.
 </P>
 <P ALIGN="LEFT">
-Vår klubbs inriktning är mycket enkel.
-Vi är en oberoende organisation som uteslutande
-marknadsför telegrafins intressen inom amatörradion.
-Vi tillåter grekiska radioamatörer att bli medlemmar om de vill och
-det räcker med deras hedersord att de ställer upp på våra
-föresatser och håller med om våra mål.
+VÃ¥r klubbs inriktning Ã¤r mycket enkel.
+Vi Ã¤r en oberoende organisation som uteslutande
+marknadsfÃ¶r telegrafins intressen inom amatÃ¶rradion.
+Vi tillÃ¥ter grekiska radioamatÃ¶rer att bli medlemmar om de vill och
+det rÃ¤cker med deras hedersord att de stÃ¤ller upp pÃ¥ vÃ¥ra
+fÃ¶resatser och hÃ¥ller med om vÃ¥ra mÃ¥l.
 </P>
 <P ALIGN="LEFT">
-GTC erkänner att det finns många andra som har lika djupa intressen i
-denna förnämliga mod och bjuder in dem till att förhöra sig om medlemsskap.
-Detsamma gäller för utlänningar som vill gå med.
-Ingen avgift krävs av utlänningar.
-Medlemsskapet är helt gratis.
+GTC erkÃ¤nner att det finns mÃ¥nga andra som har lika djupa intressen i
+denna fÃ¶rnÃ¤mliga mod och bjuder in dem till att fÃ¶rhÃ¶ra sig om medlemsskap.
+Detsamma gÃ¤ller fÃ¶r utlÃ¤nningar som vill gÃ¥ med.
+Ingen avgift krÃ¤vs av utlÃ¤nningar.
+Medlemsskapet Ã¤r helt gratis.
 </P>
 <P ALIGN="LEFT">
-Klubbens ledning består av alla de konstitutionerande medlemmarna,
-inte mindre än 22 personer.
-För att klubben skall fungera effektivt
-kommer ett verkställande utskott att tas fram.
+Klubbens ledning bestÃ¥r av alla de konstitutionerande medlemmarna,
+inte mindre Ã¤n 22 personer.
+FÃ¶r att klubben skall fungera effektivt
+kommer ett verkstÃ¤llande utskott att tas fram.
 </P>
 <P ALIGN="LEFT">
-73, de Yorgos SV1NA (för det verktställande utskottet i GTC)
+73, de Yorgos SV1NA (fÃ¶r det verktstÃ¤llande utskottet i GTC)
 </P>
 <P ALIGN="RIGHT">
 sv1na (at) hotmail.com
@@ -263,7 +263,7 @@ SV - CW - Medlemmar
 </P>
 <hr>
 <P>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 </p>
 
