--- a/hcc.html
+++ b/hcc.html
@@ -9,22 +9,22 @@ translated: 2007-05-14
 <b> HCC - Hispania CW Club (Spanska telegrafiklubben)
 </b>
 <P>
-Sedan 1983 är denna klubb aktiv i Spanien och förespråkar telegrafikonsten.
-För närvarande är det ca 500 medlemmar.
-Medlemsskap är öppet för alla som har en spansk licens.
+Sedan 1983 Ã¤r denna klubb aktiv i Spanien och fÃ¶resprÃ¥kar telegrafikonsten.
+FÃ¶r nÃ¤rvarande Ã¤r det ca 500 medlemmar.
+Medlemsskap Ã¤r Ã¶ppet fÃ¶r alla som har en spansk licens.
 <P>
 Diplom
 <UL>
 <LI><STRONG>SPA</STRONG>:
-Pintores Españoles ("Guernika" y "la Maja Desnuda")
-också kallat SPA (Spanish Painters Award) (Spanska Konstnärers Diplom)
+Pintores EspaÃ±oles ("Guernika" y "la Maja Desnuda")
+ocksÃ¥ kallat SPA (Spanish Painters Award) (Spanska KonstnÃ¤rers Diplom)
 <LI><STRONG>2CSM</STRONG>:
-Segundo Centenario Samuel Morse (Samuel Morses andra århundrade)
-<LI><STRONG>DAEACW</STRONG>: Diploma Autonomías EACW
+Segundo Centenario Samuel Morse (Samuel Morses andra Ã¥rhundrade)
+<LI><STRONG>DAEACW</STRONG>: Diploma AutonomÃ­as EACW
 (EACWs diplomet)
 </UL>
 <P>
-Tävlingar:
+TÃ¤vlingar:
 <UL>
 <LI>Encuentro con el vertical
 <LI>RAMI
@@ -34,7 +34,7 @@ Tävlingar:
 <BR CLEAR=LEFT>
 <P>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
