--- a/hsc.html
+++ b/hsc.html
@@ -7,27 +7,27 @@ translated: 2007-05-14
 <BR CLEAR=LEFT>
 <P><HR><P>
 <a href="http://www.hsc.de.cx/"><b>HSC:</b></a>
-<b>H</b>igh <b>S</b>peed <b>C</b>lub (Höghastighetsklubben)<BR>
-är för vänner av medelhöga telegrafihastigheter,
-dvs. 25 wpm (125 tecken/min) och däröver.
-Det finns ingen årlig avgift.
-Klubben organiserar tävlingar och diplom.
-Det enda sättet att bli medlem är via
-QSO i höghastighets med 5 olika HSC-medlemmar för intygande.
-Dessa intygande QSO måste bekräftas av QSL som beskriver hastigheten
-och längden på QSO:et.
+<b>H</b>igh <b>S</b>peed <b>C</b>lub (HÃ¶ghastighetsklubben)<BR>
+Ã¤r fÃ¶r vÃ¤nner av medelhÃ¶ga telegrafihastigheter,
+dvs. 25 wpm (125 tecken/min) och dÃ¤rÃ¶ver.
+Det finns ingen Ã¥rlig avgift.
+Klubben organiserar tÃ¤vlingar och diplom.
+Det enda sÃ¤ttet att bli medlem Ã¤r via
+QSO i hÃ¶ghastighets med 5 olika HSC-medlemmar fÃ¶r intygande.
+Dessa intygande QSO mÃ¥ste bekrÃ¤ftas av QSL som beskriver hastigheten
+och lÃ¤ngden pÃ¥ QSO:et.
 <P>
 Websidor:<BR CLEAR="left">
 <img src="flags/de.gif" ALT="" align=left>
 <a href="http://www.hsc.de.cx/">
- Tyskland (på tyska med engelska översättningar) <BR CLEAR="left">
+ Tyskland (pÃ¥ tyska med engelska Ã¶versÃ¤ttningar) <BR CLEAR="left">
 </A>
 <img src="flags/nl.gif" ALT="" align=left>
 <a href="http://www.morsecode.nl/hscn.html"> 
- Nederländerna (på engelska)
+ NederlÃ¤nderna (pÃ¥ engelska)
 </A>
 <P><HR><P>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
