--- a/inorc.html
+++ b/inorc.html
@@ -11,41 +11,41 @@ translated: 2007-05-14
 <A HREF="http://www.inorc.it/">
 <b>INORC: Italian Naval "Old Rhythmers" Club (Italienska Flottans Gamla Rytm-klubben)<BR></b></A>
 <P>
-Klubb för före detta professionella från marinen.
+Klubb fÃ¶r fÃ¶re detta professionella frÃ¥n marinen.
 Klubben har sin egen
 <A HREF="http://www.geocities.com/SiliconValley/Lakes/1018/inorcring.html">
 web ring</A>.
 <P>
-Detta är lite text som är klippt från den officiella INORC-websidan.
+Detta Ã¤r lite text som Ã¤r klippt frÃ¥n den officiella INORC-websidan.
 <P>
 CITAT
 <P>
 I.N.O.R.C.   M E D L E M M A R
 <P>
-I.N.O.R.C. består av tre kategorier:
+I.N.O.R.C. bestÃ¥r av tre kategorier:
 Vanliga medlemmar,
 associerade medlemmar, och
 hedersmedlemmar.
 <P>
-Vanliga medlemmar är de som har varit eller fortfarande är yrkesverksamma
+Vanliga medlemmar Ã¤r de som har varit eller fortfarande Ã¤r yrkesverksamma
 i flottan eller handelsflottan, eller inom telekommunikation,
-licensierade radioamatörer och/eller lyssnaramatör och duktig i telegrafist.
+licensierade radioamatÃ¶rer och/eller lyssnaramatÃ¶r och duktig i telegrafist.
 <P>
-De associerade medlemmarna är de som arbetar eller har arbetat inom
+De associerade medlemmarna Ã¤r de som arbetar eller har arbetat inom
 telekommunikation, att arbeta med utbredning av telegrafi
-och licensierade radioamatörer och/eller lyssnaramatör och duktig i telegrafi.
+och licensierade radioamatÃ¶rer och/eller lyssnaramatÃ¶r och duktig i telegrafi.
 <P>
-Hedersmedlemmar är de som,
-genom sin status eller sina vetenskapliga framgångar inom telekommunikation,
-förhöjer klubbens anseende.
-Hedersmedlemmar är också alla före detta ordförande i INORC.
+Hedersmedlemmar Ã¤r de som,
+genom sin status eller sina vetenskapliga framgÃ¥ngar inom telekommunikation,
+fÃ¶rhÃ¶jer klubbens anseende.
+Hedersmedlemmar Ã¤r ocksÃ¥ alla fÃ¶re detta ordfÃ¶rande i INORC.
 <P>
 SLUT CITAT
 <P>
 Email:...i1qod (at-tecknet) Lnet . it...
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
