--- a/iqrp.html
+++ b/iqrp.html
@@ -12,15 +12,15 @@ translated: 2007-05-14
 Italienska QRP-klubben
 <BR>
 <P>
-Klubb för QRP-entusiaster i Italien.
-Ovanstående websida är mest på italienska.
-Den engelska varianten är under uppbyggnad.
+Klubb fÃ¶r QRP-entusiaster i Italien.
+OvanstÃ¥ende websida Ã¤r mest pÃ¥ italienska.
+Den engelska varianten Ã¤r under uppbyggnad.
 <P>
 Kontakt E-mail...i3ffe (at-symbol) quipo.it...
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
