--- a/isqrp.html
+++ b/isqrp.html
@@ -9,14 +9,14 @@ translated: 2007-05-14
 <ul>
 <A HREF="http://www.sardiniaqrp.com">
 <b>IS-QRP: </b>Associazione Radioamatoriale Sardinia QRP Club</A>
-(Sardiniens radioamatörförenings QRP-klubb)
+(Sardiniens radioamatÃ¶rfÃ¶renings QRP-klubb)
 <P>
-Lågeffektklubb från Sardinien.
-Mottot är: "Bygg, Lär, Lär ut".
+LÃ¥geffektklubb frÃ¥n Sardinien.
+Mottot Ã¤r: "Bygg, LÃ¤r, LÃ¤r ut".
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
