--- a/itc.html
+++ b/itc.html
@@ -10,13 +10,13 @@ translated: 2007-05-14
 <A HREF=" http://www.italiantelegraphyclub.net/">
 <b>ITC: I</b>talian <b>T</b>elegraphy <b>C</b>lub</A> 
 Italienska telegrafiklubben<BR>
-(kallas också "Radiotelegrafisti")
+(kallas ocksÃ¥ "Radiotelegrafisti")
 <P>
-Detta var tidigare en mötesplats som ARI-medlemmar kunde vara med på
+Detta var tidigare en mÃ¶tesplats som ARI-medlemmar kunde vara med pÃ¥
 om telegrafi var deras favoritmod.<BR>
-Nu är det en internationell klubb som innehåller utlänska medlemmar.
+Nu Ã¤r det en internationell klubb som innehÃ¥ller utlÃ¤nska medlemmar.
 <P>
-Klubben sköts av:<BR>
+Klubben skÃ¶ts av:<BR>
    IN3VST<BR>
    Vito Vetrano<BR>
    Via Verdi 27/A<BR>
@@ -24,7 +24,7 @@ Klubben sköts av:<BR>
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
