--- a/liaison.html
+++ b/liaison.html
@@ -13,24 +13,24 @@ translated: 2007-05-14
 <TR>
 <TD align="LEFT"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="CENTER">
-<H1>Det europeiska CW-förbundet (EUCW)<BR>
+<H1>Det europeiska CW-fÃ¶rbundet (EUCW)<BR>
 <FONT size="-1">hos AGCW-DLs EUCW-kontaktman</FONT></H1>
 </TD>
 <TD align="RIGHT"><IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
 </TABLE>
 
-<H2>Listan över de klubbar som EUCW har vänskapliga förbindelser med.</H2>
-Denna slags associering är öppen bara för klubbar utanför Europa.
-Kontakten med EUCW hålls via kontaktmän.
+<H2>Listan Ã¶ver de klubbar som EUCW har vÃ¤nskapliga fÃ¶rbindelser med.</H2>
+Denna slags associering Ã¤r Ã¶ppen bara fÃ¶r klubbar utanfÃ¶r Europa.
+Kontakten med EUCW hÃ¥lls via kontaktmÃ¤n.
 <P><BR>
-Förmat för listan (som är sortera i alfabetisk ordning):</P>
+FÃ¶rmat fÃ¶r listan (som Ã¤r sortera i alfabetisk ordning):</P>
 
 <P><B>Klubbens korta namn och land</B></P>
 
 <P><B>Klubbens ursprungliga namn,
-Engelska namnet om det finns och skiljer sig från det ursprungliga namnet
-(Det översatta namnet om översättaren klarar av det)</B><BR>
+Engelska namnet om det finns och skiljer sig frÃ¥n det ursprungliga namnet
+(Det Ã¶versatta namnet om Ã¶versÃ¤ttaren klarar av det)</B><BR>
 Klubbens typ<BR>
 Kontaktmannens anropssignal, namn, post och mailaddress
 <BR>
@@ -42,7 +42,7 @@ andra adresser<BR>
 "arci.html">QRP-ARCI</A> (U.S.A.)</B></P>
 
 <P><B>QRP Amateur Radio Club International
-(Internationella QRP-amatörradioklubben)</B><BR>
+(Internationella QRP-amatÃ¶rradioklubben)</B><BR>
 QRP-klubb</P>
 
 <HR>
@@ -51,7 +51,7 @@ QRP-klubb</P>
 
 <P><B>Clube de CW Aguias do Sul</B><BR>
 Vanlig telegrafiklubb<BR>
-c/o: PP5AS, Dr. Ernst Grimm, Cx.P. 27, 88001-970 Florianópolis -
+c/o: PP5AS, Dr. Ernst Grimm, Cx.P. 27, 88001-970 FlorianÃ³polis -
 SC, E-mail:...grimm (at_symbol) unetsul.com.br...<BR>
 
 <HR>
