--- a/lzcwc.html
+++ b/lzcwc.html
@@ -8,7 +8,7 @@ translated: 2007-05-14
 </CENTER><P ALIGN=LEFT>
 <ul>
 <b>LZCWC: </b>LZ CW Club - Contest group
-LZ telegrafiklubben - tävlingsgruppen
+LZ telegrafiklubben - tÃ¤vlingsgruppen
 <BR>
 <P>
 <PRE>
@@ -24,19 +24,19 @@ WWW:  http://web.orbitel.bg/lzcwc/
 
 </PRE>
 Notera klubbens aktiviteter:
-Rundabordet varje tisdag klockan 18.00Z på 3527 kHz,
-nätkontrollstation är LZ9CWC,
-som körs för LZCWCs syfte av LZ1AF.
-Under rundabordet kan nomineringar om medlemsskap framföras och röstas om.<p>
+Rundabordet varje tisdag klockan 18.00Z pÃ¥ 3527 kHz,
+nÃ¤tkontrollstation Ã¤r LZ9CWC,
+som kÃ¶rs fÃ¶r LZCWCs syfte av LZ1AF.
+Under rundabordet kan nomineringar om medlemsskap framfÃ¶ras och rÃ¶stas om.<p>
 
-En minitävling den sista tosdagen i månaden 
+En minitÃ¤vling den sista tosdagen i mÃ¥naden 
 18.00-19.00Z 3530-3570 kHz.
-LZCWC ger till medlemmar ut ett certifikat för enastående telegrafikörande.
-Nomineringar och röstningar sker vid rundaborden.
+LZCWC ger till medlemmar ut ett certifikat fÃ¶r enastÃ¥ende telegrafikÃ¶rande.
+Nomineringar och rÃ¶stningar sker vid rundaborden.
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
