--- a/oecwg.html
+++ b/oecwg.html
@@ -11,60 +11,60 @@ translated: 2007-05-14
 <B>OE-CW-Gemeinschaft,</B> (OE-telegrafiklubben)
 
 <!/A> 
-Österrikisk klubb för telegrafientusiaster.
+Ã–sterrikisk klubb fÃ¶r telegrafientusiaster.
 
 <P>
-Den främsta Österrikiska telegrafiintressegruppen
+Den frÃ¤msta Ã–sterrikiska telegrafiintressegruppen
 <P>
 skulle vilja presentera sig
 <P>
-Morsetelegrafi är den äldsta och mest traditionella formen av 
-fjärrkommunikation men tyvärr har dess era tagit slut
-inom den kommerciella radiotjänsten såväl som inom sjöfarten.
+Morsetelegrafi Ã¤r den Ã¤ldsta och mest traditionella formen av 
+fjÃ¤rrkommunikation men tyvÃ¤rr har dess era tagit slut
+inom den kommerciella radiotjÃ¤nsten sÃ¥vÃ¤l som inom sjÃ¶farten.
 <P>
-Om flera tusen radioamatörer i hela världen fortfarande använder sin
-telegrafinyckeln, är det inte bara på grund av entusiasters nostalgi
-utan för att telegrafin, såsom är allmänt erkänt, möjliggör
-global kommunikation med enkla medeln även under ofördelaktiga förhållanden.
+Om flera tusen radioamatÃ¶rer i hela vÃ¤rlden fortfarande anvÃ¤nder sin
+telegrafinyckeln, Ã¤r det inte bara pÃ¥ grund av entusiasters nostalgi
+utan fÃ¶r att telegrafin, sÃ¥som Ã¤r allmÃ¤nt erkÃ¤nt, mÃ¶jliggÃ¶r
+global kommunikation med enkla medeln Ã¤ven under ofÃ¶rdelaktiga fÃ¶rhÃ¥llanden.
 <P>
-För att tillhandahålla ett hem åt alla radioamatörer som vill använda
-sin nyckel åtminstone då och då eller - ännu bättre - för att ge förtur
-åt telegrafikommunikation i allmänhet har
-den österrikiska amatörradioföreningen - ÖVSV -
-beslutat att skapa en särskild sektion för telegrafi inom föreningen
-som jag tar hand om från 24:e maj 1997, och i den kan intresserade
-personer från Österrike såväl som från utlandet bli medlemmar i OE-CW-G,
-en intressegrupp för radiotelegrafi vars mål är att marknadsföra
-förbättringar av telegrafiteknik och uppmuntra användandet av telegrafi
-och därigenom försöka etablera kontakter och vänskap mellan radioamatörer
-i hela världen.
+FÃ¶r att tillhandahÃ¥lla ett hem Ã¥t alla radioamatÃ¶rer som vill anvÃ¤nda
+sin nyckel Ã¥tminstone dÃ¥ och dÃ¥ eller - Ã¤nnu bÃ¤ttre - fÃ¶r att ge fÃ¶rtur
+Ã¥t telegrafikommunikation i allmÃ¤nhet har
+den Ã¶sterrikiska amatÃ¶rradiofÃ¶reningen - Ã–VSV -
+beslutat att skapa en sÃ¤rskild sektion fÃ¶r telegrafi inom fÃ¶reningen
+som jag tar hand om frÃ¥n 24:e maj 1997, och i den kan intresserade
+personer frÃ¥n Ã–sterrike sÃ¥vÃ¤l som frÃ¥n utlandet bli medlemmar i OE-CW-G,
+en intressegrupp fÃ¶r radiotelegrafi vars mÃ¥l Ã¤r att marknadsfÃ¶ra
+fÃ¶rbÃ¤ttringar av telegrafiteknik och uppmuntra anvÃ¤ndandet av telegrafi
+och dÃ¤rigenom fÃ¶rsÃ¶ka etablera kontakter och vÃ¤nskap mellan radioamatÃ¶rer
+i hela vÃ¤rlden.
 <P>
-För alla som vill gå med i klubben gäller följande enkla ansökningsprocedur:
+FÃ¶r alla som vill gÃ¥ med i klubben gÃ¤ller fÃ¶ljande enkla ansÃ¶kningsprocedur:
 <P>
-1. Skicka in en informell ansökan om medlemsskap i OE-CW-G
+1. Skicka in en informell ansÃ¶kan om medlemsskap i OE-CW-G
 <P>
-2. För att uppmuntra användandet av telegrafi på banden, skicka med
-20 QSL-kort som bekräftar telegrafikontakter.
+2. FÃ¶r att uppmuntra anvÃ¤ndandet av telegrafi pÃ¥ banden, skicka med
+20 QSL-kort som bekrÃ¤ftar telegrafikontakter.
 <P>
-3. Genomför en kontakt (QSO) på någon av sked-kvällarna
+3. GenomfÃ¶r en kontakt (QSO) pÃ¥ nÃ¥gon av sked-kvÃ¤llarna
 <P>
-4. För att täcka kostnader för utskrifter och porto, lägg in 8 IRCs
-eller passande värde i utlänsk valuta
-(medlemsskapet gäller tillsvidare och inga ytterligare avgifter samlas in).
+4. FÃ¶r att tÃ¤cka kostnader fÃ¶r utskrifter och porto, lÃ¤gg in 8 IRCs
+eller passande vÃ¤rde i utlÃ¤nsk valuta
+(medlemsskapet gÃ¤ller tillsvidare och inga ytterligare avgifter samlas in).
 <P>
 <PRE>
 Kontaktperson: OE6FYG
  Herbert Lafer
  Speltenbach 55
- A-8280 Fürstenfeld
+ A-8280 FÃ¼rstenfeld
 </PRE>
 <P>
-Månatligt QTC på tyska:
-Den första lördagen varje månad på 3575 klockan 8 lokal tid.
+MÃ¥natligt QTC pÃ¥ tyska:
+Den fÃ¶rsta lÃ¶rdagen varje mÃ¥nad pÃ¥ 3575 klockan 8 lokal tid.
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
