--- a/officers.html
+++ b/officers.html
@@ -12,22 +12,22 @@ translated: 2007-05-14
 <TR>
 <TD align="LEFT"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="CENTER">
-<H1>Det europeiska CW-fˆrbundet<BR>
+<H1>Det europeiska CW-f√∂rbundet<BR>
 <FONT size="-1">hos AGCW-DLs EUCW-kontaktman</FONT></H1>
 </TD>
 <TD align="RIGHT"><IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
 </TABLE>
 
-<P><B>EUCW-ordfˆranden:</B></P>
+<P><B>EUCW-ordf√∂randen:</B></P>
 
 <P>LZ1PJ, Ivan Ivanov, PO Box 15, BG-1324 Sofia<BR>
 E-mail:...lz1pj (at-symbol) qsl.net...</P>
 
-<P><B>÷vriga EUCW-funktion‰rer:</B></P>
+<P><B>√ñvriga EUCW-funktion√§rer:</B></P>
 
 <P><A href="eucwp.html">EUCW CW Fraternizing Party (EUCW FP-aktivitet)</A> 
-och <A href="eucwa.html">diplom</A>-funktion‰r:<BR>
+och <A href="eucwa.html">diplom</A>-funktion√§r:<BR>
 DK7VW, Werner 'Joe' Jochem, Wendelsborn 34, D-66606 St. Wendel,
 E-mail:...joe (at-symbol) dk7vw.de...</P>
 
@@ -35,33 +35,33 @@ E-mail:...joe (at-symbol) dk7vw.de...</P>
 
 <P><A href="euskd.html">EUCW Midsummer Straight Key Day
 (EUCWs midsommarhandpumpsdag - SKD)</A>
-t‰vlingsledare:<BR>
-SM0OY, Lars Nordgren, Lindv‰gen 19, S-19270 Sollentuna
+t√§vlingsledare:<BR>
+SM0OY, Lars Nordgren, Lindv√§gen 19, S-19270 Sollentuna
 </P>
 
 <P><A href="euqrs.html">EUCW QRS Party (EUCWs QRS-party)</A>
-t‰vlingsledare:<BR>
+t√§vlingsledare:<BR>
 M0BPT, Robert D. Walker, 125, Devereux Road, West Bromwich B70 6RQ,
 </P>
 
-<P><A href="eu160.html">EUCW 160m Contest (EUCWs 106m-t‰vling)</A>
-t‰vlingsledare:<BR>
+<P><A href="eu160.html">EUCW 160m Contest (EUCWs 106m-t√§vling)</A>
+t√§vlingsledare:<BR>
 F6CEL, Ghislain Barbason, 5 rue de l'Ecluse, F-02190 Pignicourt, <BR>
 Email:..f6cel (ay-symbol) wanadoo.fr..
 </P>
 
-<P><A href="eunov.html">EUCW Novice Award (EUCWs nybˆrjardiplom)</A>
-funktion‰r:<BR>
+<P><A href="eunov.html">EUCW Novice Award (EUCWs nyb√∂rjardiplom)</A>
+funktion√§r:<BR>
 G8PG, Gus Taylor, 37 Pickerill Rd, Greasby, Merseyside CH39
 3ND.</P>
 
 
-<P><A href="eucw.html">EUCW-kontaktm‰n</A>.
-EUCW-kontaktm‰n (ECM)
+<P><A href="eucw.html">EUCW-kontaktm√§n</A>.
+EUCW-kontaktm√§n (ECM)
 representerar sina medlemsklubbar i EUCW.</P> 
 
-<P><A href="liaison.html">Kontaktm‰n</A>.
-Fˆr att s‰kerst‰lla v‰nskaplinga fˆrbindelser
+<P><A href="liaison.html">Kontaktm√§n</A>.
+F√∂r att s√§kerst√§lla v√§nskaplinga f√∂rbindelser
 som EUCW har med sina associerade transatlantiska klubbar.</P> 
 
 <HR>
