--- a/ruqrp.html
+++ b/ruqrp.html
@@ -7,14 +7,14 @@ translated: 2007-05-14
 <P><img src="imgsclub/ruqrp.gif" ALT="" align=left></P>
 </CENTER><P ALIGN=LEFT>
 <ul>
-<b>RUQRP: </b>RU QRP Club (Ryska lågeffektsklubben)<BR>
+<b>RUQRP: </b>RU QRP Club (Ryska lÃ¥geffektsklubben)<BR>
 <P>
 <PRE>
-Den ryska klubben för QRP-entusiaster.
+Den ryska klubben fÃ¶r QRP-entusiaster.
 
 Kontaktperson:
 Oleg V. Borodin RV3GM, Box 229, 398043 Lipetsk, 
-E-mail: master72 à lipetsk.ru
+E-mail: master72 Ã  lipetsk.ru
 
 Web RU-QRP klubben: www.qrp.ru
 
@@ -24,7 +24,7 @@ UE3QRP & RU9QRP/9  HQ-stationer
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
