--- a/spcwc.html
+++ b/spcwc.html
@@ -9,54 +9,54 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://qtc.radio.org.pl/spcwc/"><b>SPCWC:</b></a> 
 Polsk telegrafigrupp<P>
-Klicka ovan för att komma till den officiella klubbsidan som är skriven på
+Klicka ovan fÃ¶r att komma till den officiella klubbsidan som Ã¤r skriven pÃ¥
 polska, engelska och tyska.
-Den innehåller även en lista av medlemmar.
-Texten nedan kommer från sidan.
+Den innehÃ¥ller Ã¤ven en lista av medlemmar.
+Texten nedan kommer frÃ¥n sidan.
 <P>
 <HR>
 <P>
 <FONT COLOR="RED">Motto:<I> "Everybody can talk but CW is an art"</I></FONT> 
-(Alla kan prata med telegrafi är en konst)
-<H2>Regler för den polska telegrafigruppen (SP-CW-C)</H2></CENTER>
+(Alla kan prata med telegrafi Ã¤r en konst)
+<H2>Regler fÃ¶r den polska telegrafigruppen (SP-CW-C)</H2></CENTER>
 <OL>
-<LI> SP-CW-C är en speciell klubb ifrån Polska amatörradiounionen (PZK)
-som samlar radioamatörer och lyssnaramatörer med speciellt intresse
-för telegrafi (CW).
+<LI> SP-CW-C Ã¤r en speciell klubb ifrÃ¥n Polska amatÃ¶rradiounionen (PZK)
+som samlar radioamatÃ¶rer och lyssnaramatÃ¶rer med speciellt intresse
+fÃ¶r telegrafi (CW).
 
-<LI> Medlemsskap i SP-CW-C är öppet för alla OP (eller SWL) som
-tillhandahåller bevis på:<BR>
-<B>(a)</B> 3 SP-CW-C medlemmar körda på telegrafi, eller<BR>
-<B>(b)</B> 300 körda stationer på telegrafi under det gångna året.
+<LI> Medlemsskap i SP-CW-C Ã¤r Ã¶ppet fÃ¶r alla OP (eller SWL) som
+tillhandahÃ¥ller bevis pÃ¥:<BR>
+<B>(a)</B> 3 SP-CW-C medlemmar kÃ¶rda pÃ¥ telegrafi, eller<BR>
+<B>(b)</B> 300 kÃ¶rda stationer pÃ¥ telegrafi under det gÃ¥ngna Ã¥ret.
 
-<LI> Ansökan skall innehålla en lista av alla de QSOn som krävs bekräftat
-av två licensierade män eller den lokala amatörradioklubben.
+<LI> AnsÃ¶kan skall innehÃ¥lla en lista av alla de QSOn som krÃ¤vs bekrÃ¤ftat
+av tvÃ¥ licensierade mÃ¤n eller den lokala amatÃ¶rradioklubben.
 
-<LI>Medlemsskapet bekräftas med ett speciellt certifikat vars kostnad
-(motsvarande 3 USD) täcks av den som ansöker.
+<LI>Medlemsskapet bekrÃ¤ftas med ett speciellt certifikat vars kostnad
+(motsvarande 3 USD) tÃ¤cks av den som ansÃ¶ker.
 
-<LI>Medlemsskapet är livslångt. Inga ytterligare avgifter finns.
+<LI>Medlemsskapet Ã¤r livslÃ¥ngt. Inga ytterligare avgifter finns.
 
 <LI>En medlem i en internationell telegrafiklubb kan bli medlem i SP-CW-C
-bara genom att skicka in ansökan, utan några ytterligare krav.
+bara genom att skicka in ansÃ¶kan, utan nÃ¥gra ytterligare krav.
 
-<LI>I enlighet med p.2, måste SWL bevisa att han hört 3 SP-CW-C members,
-eller 300 CW stationer under det gångna året.
+<LI>I enlighet med p.2, mÃ¥ste SWL bevisa att han hÃ¶rt 3 SP-CW-C members,
+eller 300 CW stationer under det gÃ¥ngna Ã¥ret.
 
-<LI> Alla medlemmar kan använda klubbens logo, medlemmarnas kännetecken.
-Den bör visas på QSL-kortet.
+<LI> Alla medlemmar kan anvÃ¤nda klubbens logo, medlemmarnas kÃ¤nnetecken.
+Den bÃ¶r visas pÃ¥ QSL-kortet.
 
-<LI>Klubben styrs av sin egen ordföranden som utses och avpolleteras
-av PZKs (Den Polska amatörradiounionen) ordförande.
+<LI>Klubben styrs av sin egen ordfÃ¶randen som utses och avpolleteras
+av PZKs (Den Polska amatÃ¶rradiounionen) ordfÃ¶rande.
 
-<LI>Betalningen och ansökan skall skickas till:<BR>
+<LI>Betalningen och ansÃ¶kan skall skickas till:<BR>
 </OL>
         SP-CW-C, P.O. Box 18, 82-312 Elblag-13, Polen. <BR>
 E-mail:...qtc (at-symbol) post.pl...<P>
 </BODY>
 </HTML>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
