--- a/ucwc.html
+++ b/ucwc.html
@@ -12,11 +12,11 @@ MEZHDUNARODNYJ RADIOTELEGRAFNYJ KLUB KOROTKOVOLNOVIKOV
 <P>
 HQ: UCWC, P.O.BOX 28, 250000 Chernigov-Postamt, Ukraina OSS.
 <P>
-OSS. klubb för telegrafientusiaster.
+OSS. klubb fÃ¶r telegrafientusiaster.
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
