--- a/vhsc.html
+++ b/vhsc.html
@@ -8,61 +8,61 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://www.morsecode.nl/vhscn.html"><b>VHSC:</b></a> 
 <b>V</b>ery <b>H</b>igh <b>S</b>peed <b>C</b>lub
-Mycket hög hastighetsklubben
+Mycket hÃ¶g hastighetsklubben
 <BR>
-är en höghastighetsklubb för vänner av telegrafihastigheter
-på åtminstone 200 tpm (40 wpm).
+Ã¤r en hÃ¶ghastighetsklubb fÃ¶r vÃ¤nner av telegrafihastigheter
+pÃ¥ Ã¥tminstone 200 tpm (40 wpm).
 <B>
-Allmän information</B> (Källa: VHSCs web-sida)
+AllmÃ¤n information</B> (KÃ¤lla: VHSCs web-sida)
 <P>
-Radiotelegrafisternas mycket höghastighetsklubb VHSC grundades
-den förste maj 1961 under beskydd av VERON och DARC och har till syfte att
-samla radioamatörer som klarar av att sända och ta emot mycket hög
-hastighetstelegrafi, och gör det för att uppmuntra telegrafitrafik
-i allmänhete och höghastighetstrafik i synnerhet.
+Radiotelegrafisternas mycket hÃ¶ghastighetsklubb VHSC grundades
+den fÃ¶rste maj 1961 under beskydd av VERON och DARC och har till syfte att
+samla radioamatÃ¶rer som klarar av att sÃ¤nda och ta emot mycket hÃ¶g
+hastighetstelegrafi, och gÃ¶r det fÃ¶r att uppmuntra telegrafitrafik
+i allmÃ¤nhete och hÃ¶ghastighetstrafik i synnerhet.
 <P>
-<B>Hur man går med i VHSC
+<B>Hur man gÃ¥r med i VHSC
 </B>
 <P>
-Var aktiv på banden och använd telegrafihastigheter på 200 tpm eller högre,
-och visa dina färdigheter att läsa och nyckla denna hastighet perfekt.
+Var aktiv pÃ¥ banden och anvÃ¤nd telegrafihastigheter pÃ¥ 200 tpm eller hÃ¶gre,
+och visa dina fÃ¤rdigheter att lÃ¤sa och nyckla denna hastighet perfekt.
 VHSC-medlemmar kan ge dig en rekommendation till ett VHSC-medlemsskap.
-Fråga inte efter en rekommendation, jaga inte efter den.
-Bara visa dina färdigheter med säker mottagning och utmärkt nyckling
-vid hastigheter på åtminstone 200 bmp!
-En rekommendation kan göras efter en tvåvägs-telegrafikontakt -- 
-med en VHSC-medlem -- som pågick under minst 30 minuter med en 
-telegrafihastighet på 200 bokstäver i minuten eller snabbare.
-(PARIS-beräkningen, 40 wpm).
-Säker mottagning skall klaras av av den som söker tillsammans med 
-utmärkt nyckling.
-Inga tangentbord eller avkodare tillåts under dessa QSO.
-En rekommendation gäller för högst tre år.
-Efter att du fått 4 rekommendationer, skicka in din ansökan om VHSC-medlemsskap
+FrÃ¥ga inte efter en rekommendation, jaga inte efter den.
+Bara visa dina fÃ¤rdigheter med sÃ¤ker mottagning och utmÃ¤rkt nyckling
+vid hastigheter pÃ¥ Ã¥tminstone 200 bmp!
+En rekommendation kan gÃ¶ras efter en tvÃ¥vÃ¤gs-telegrafikontakt -- 
+med en VHSC-medlem -- som pÃ¥gick under minst 30 minuter med en 
+telegrafihastighet pÃ¥ 200 bokstÃ¤ver i minuten eller snabbare.
+(PARIS-berÃ¤kningen, 40 wpm).
+SÃ¤ker mottagning skall klaras av av den som sÃ¶ker tillsammans med 
+utmÃ¤rkt nyckling.
+Inga tangentbord eller avkodare tillÃ¥ts under dessa QSO.
+En rekommendation gÃ¤ller fÃ¶r hÃ¶gst tre Ã¥r.
+Efter att du fÃ¥tt 4 rekommendationer, skicka in din ansÃ¶kan om VHSC-medlemsskap
 och 10 IRS eller motsvarande, till VHSC-sekreteraren.
-Anropssignalen för VHSC-kandidaten kommer att publiceras på vår VHSC-bulletin,
-som är ett nyhetsblad som skickas till alla medlemmar.
-Om det inte finns några invändningar hos VHSC-medlemmar inom tre månader
+Anropssignalen fÃ¶r VHSC-kandidaten kommer att publiceras pÃ¥ vÃ¥r VHSC-bulletin,
+som Ã¤r ett nyhetsblad som skickas till alla medlemmar.
+Om det inte finns nÃ¥gra invÃ¤ndningar hos VHSC-medlemmar inom tre mÃ¥nader
 kommer VHSC-kandidaten att registreras som VHSC-medlem.
 <P>
-Alla rekommendationer måste visa varaktigheten av de VHSC-test-kontakter
-och nämna vilken telegrafihastighet som användes under dne VHSC-test-kontakten.
-Alla ansökningar skall innehålla en försäkran att ansökaren inte använde
+Alla rekommendationer mÃ¥ste visa varaktigheten av de VHSC-test-kontakter
+och nÃ¤mna vilken telegrafihastighet som anvÃ¤ndes under dne VHSC-test-kontakten.
+Alla ansÃ¶kningar skall innehÃ¥lla en fÃ¶rsÃ¤kran att ansÃ¶karen inte anvÃ¤nde
 tangentbord eller avkodare under de fyra (4) test-kontakterna.
 Ett medlemsskapscertifikat skickas till medlemmarna.
-Det finns inte någon ytterligare betalning för livsmedlemsskapet.
-Ansökningar skall skickas till ordföranden i VHSC:
+Det finns inte nÃ¥gon ytterligare betalning fÃ¶r livsmedlemsskapet.
+AnsÃ¶kningar skall skickas till ordfÃ¶randen i VHSC:
 <P>
 PA0DIN D.J. Hoogma <BR>
 Schoutstraat 15 <BR>
 6525 XR NIJMEGEN <BR>
-Nederländerna<BR>
+NederlÃ¤nderna<BR>
 <P>
 E-mail...dingelom (at-symbol) hetnet.nl...
 <BR>
 </PRE>
 <P><HR><P>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
