--- a/arci.html
+++ b/arci.html
@@ -8,8 +8,8 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://www.qrparci.org"><b>QRP-ARCI:</b></a><br>
 
-Detta är en av våra vän-klubbar utanför europa.
-Det är en stor amerikansk klubb som ägnar sig åt lågeffekt-QRP.
+Detta Ã¤r en av vÃ¥ra vÃ¤n-klubbar utanfÃ¶r europa.
+Det Ã¤r en stor amerikansk klubb som Ã¤gnar sig Ã¥t lÃ¥geffekt-QRP.
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
