--- a/bqc.html
+++ b/bqc.html
@@ -10,16 +10,16 @@ translated: 2007-05-14
 
 <A HREF="http://home.wanadoo.nl/bqc/index.html"><b>BQC: </b></A>
 <b>B</b>enelux <b>Q</b>RP <b>C</b>lub <BR>
-Denna klubb är ägnad åt QRP och definierar det som 5W HF output.
-Klubben är öppen för alla QRP-enthusiaster och 
-ger varje kvartal ut en tidning på holländska.
-Tidningen är till för QRP-operatörer och hemmabyggare.
-Adressen för att kontakta klubben är:
-Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, Nederländerna
+Denna klubb Ã¤r Ã¤gnad Ã¥t QRP och definierar det som 5W HF output.
+Klubben Ã¤r Ã¶ppen fÃ¶r alla QRP-enthusiaster och 
+ger varje kvartal ut en tidning pÃ¥ hollÃ¤ndska.
+Tidningen Ã¤r till fÃ¶r QRP-operatÃ¶rer och hemmabyggare.
+Adressen fÃ¶r att kontakta klubben Ã¤r:
+Benelux QRP Club, Postbus 15, 2100 AA, Heemstede, NederlÃ¤nderna
 <P>
 </ul>
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
