--- a/htc.html
+++ b/htc.html
@@ -9,12 +9,12 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://www.htc.ch"><b>HTC:</b></a>
 <b>H</b>elvetia <b>T</b>elegraphy <b>C</b>lub (Schweiziska telegrafiklubben)<BR>
-Detta är en schweizisk klubb för telegrafivänner.
-Håll utkik efter deras klubbstationer HB9HC och HB9HTC.
+Detta Ã¤r en schweizisk klubb fÃ¶r telegrafivÃ¤nner.
+HÃ¥ll utkik efter deras klubbstationer HB9HC och HB9HTC.
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
