--- a/olang.html
+++ b/olang.html
@@ -10,7 +10,7 @@ translated: 2007-05-14
 <TR>
 <TD align="LEFT"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="CENTER">
-<H1>Hj‰lp pÂ andra sprÂk via email</H1>
+<H1>Hj√§lp p√• andra spr√•k via email</H1>
 </TD>
 <TD align="RIGHT"><IMG src="imgs/agcwecm.gif" alt=""></TD>
 </TR>
@@ -24,10 +24,10 @@ respondos al viaj domandoj esperantlingve. Skribu al la adreso:
 EUCW (at) agcw.de 
 
 <HR width="100%">
-<IMG src="flags/fr.gif" alt="En franÁais"><BR>
+<IMG src="flags/fr.gif" alt="En fran√ßais"><BR>
 Malheureusement nous n'avions pas les moyens pour traduire
-l'ensemble de nos pages en franÁais. En tous cas soyez bienvenues de
-poser des questions en franÁais par courrier Èlectronique. …crivez ‡
+l'ensemble de nos pages en fran√ßais. En tous cas soyez bienvenues de
+poser des questions en fran√ßais par courrier √©lectronique. √âcrivez √†
 EUCW (at) agcw.de 
 
 <HR width="100%">
@@ -35,14 +35,14 @@ EUCW (at) agcw.de
 Purtroppo non avevamo i mezzi di pubblicare l'intero sito
 anche in italiano. Comunque, potete
 scrivere in italiano se avete delle domande.
-L'indirizzo Ë: EUCW (at) agcw.de 
+L'indirizzo √®: EUCW (at) agcw.de 
 
 <HR width="100%">
 <IMG src="flags/es.gif" alt="En castellano"><BR> Lamentablemente no tuvimos
 los recursos para traducir los textos al castellano. Sin embargo estamos
-dispuesto a contestar a cualquier pregunta por correo electrÛnico.
-La direcciÛn es EUCW (at) agcw.de<BR>
-Adem·s, la EACW tiene una versiÛn traducida de
+dispuesto a contestar a cualquier pregunta por correo electr√≥nico.
+La direcci√≥n es EUCW (at) agcw.de<BR>
+Adem√°s, la EACW tiene una versi√≥n traducida de
 <a href="http://www.iespana.es/eacw-club/eucw_castellano.html">
 algunos ficheros</a>.
 
