--- a/rtc.html
+++ b/rtc.html
@@ -11,31 +11,31 @@ translated: 2007-05-14
 <b>RTC:</b>
 <B>R</B>adio <B>T</B>elegraphy <B>C</B>lub (Radiotelegrafiklubben)<P>
 
-Motto: <B>CWFE</B> CW forever (Telegrafi för evigt)<P>
-Grundades 1990-03-10 av 18 telegrafientusiaster i före detta DDR (Y2).
-Målet är att bevara, odla och uppmuntra användandet av telegrafi
-i amatörradio.
-Tyngdpunkten ligger på operatörsskicklighet i att hantera telegrafi
+Motto: <B>CWFE</B> CW forever (Telegrafi fÃ¶r evigt)<P>
+Grundades 1990-03-10 av 18 telegrafientusiaster i fÃ¶re detta DDR (Y2).
+MÃ¥let Ã¤r att bevara, odla och uppmuntra anvÃ¤ndandet av telegrafi
+i amatÃ¶rradio.
+Tyngdpunkten ligger pÃ¥ operatÃ¶rsskicklighet i att hantera telegrafi
 utan datorer, tangentbord eller avkodare.<p>
 
-Tillåter tyska (fullt medlemsskap) och utlänska (stödmedlemsskap)
-telegrafientusiaster som är villiga att gå med förutsatt att
-han eller hon kan bevisa tillräcklig telegrafiaktivitet på banden.<p>
+TillÃ¥ter tyska (fullt medlemsskap) och utlÃ¤nska (stÃ¶dmedlemsskap)
+telegrafientusiaster som Ã¤r villiga att gÃ¥ med fÃ¶rutsatt att
+han eller hon kan bevisa tillrÃ¤cklig telegrafiaktivitet pÃ¥ banden.<p>
 
-Detta mäts av ett poängsystem:
-500 poäng måste samlas ihop under de 12 månaderna före medlemsskapsansökan.
-Telegrafi-QSOn räknas som en poäng,
-telegrafi-diplom räknas som 50 poäng (högst 5 diplom får räknas) och
-rag-chew-QSO som är minst 1 timme långa räknas också som 50 poäng.
-De senare måste dokumenteras med QSL.
-Ansökningsavgiften är 5 Euro eller US$.<p>
+Detta mÃ¤ts av ett poÃ¤ngsystem:
+500 poÃ¤ng mÃ¥ste samlas ihop under de 12 mÃ¥naderna fÃ¶re medlemsskapsansÃ¶kan.
+Telegrafi-QSOn rÃ¤knas som en poÃ¤ng,
+telegrafi-diplom rÃ¤knas som 50 poÃ¤ng (hÃ¶gst 5 diplom fÃ¥r rÃ¤knas) och
+rag-chew-QSO som Ã¤r minst 1 timme lÃ¥nga rÃ¤knas ocksÃ¥ som 50 poÃ¤ng.
+De senare mÃ¥ste dokumenteras med QSL.
+AnsÃ¶kningsavgiften Ã¤r 5 Euro eller US$.<p>
 
-Klubben aktiveter klubbstationerna DKØRTC and DLØRTC.
-Tre diplom ges ut nämligen W-RTC-M, CWD, CWAA. 
+Klubben aktiveter klubbstationerna DKÃ˜RTC and DLÃ˜RTC.
+Tre diplom ges ut nÃ¤mligen W-RTC-M, CWD, CWAA. 
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
