--- a/scag.html
+++ b/scag.html
@@ -12,14 +12,14 @@ translated: 2007-05-14
 (Skandinaviska telegrafiaktivitetsgruppen)<P>
 <P>
 Motto: <B>To support and Encourage Amateur Radio CW</B>
-Att stödja och uppmuntra amatörradiotelegrafi<P>
-Tillåter icke-skandinaver som medlemmar men det mesta av den tryckta
-bulletinen "SCAG-NL" är skriven på danska eller svenska
+Att stÃ¶dja och uppmuntra amatÃ¶rradiotelegrafi<P>
+TillÃ¥ter icke-skandinaver som medlemmar men det mesta av den tryckta
+bulletinen "SCAG-NL" Ã¤r skriven pÃ¥ danska eller svenska
 (men en engelsk sammanfattning finns med).
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
