--- a/shsc.html
+++ b/shsc.html
@@ -7,11 +7,11 @@ translated: 2007-05-14
 <P ALIGN=LEFT>
 <a href="http://www.morsecode.nl/shscn.html"><b>SHSC:</b></a>
 <b>S</b>uper <b>H</b>igh <b>S</b>peed <b>C</b>lub
-(Superhöghastighetsklubben)<BR>
-är en höghastighetsklubb för vänner av telegrafi i minst 250-takt (50 WPM).
+(SuperhÃ¶ghastighetsklubben)<BR>
+Ã¤r en hÃ¶ghastighetsklubb fÃ¶r vÃ¤nner av telegrafi i minst 250-takt (50 WPM).
 </P><br>
 <P><HR><P>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
