--- a/svdisc.html
+++ b/svdisc.html
@@ -5,20 +5,20 @@
 <BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
 <P>
 <FONT size="-1">
-<h3>Översättarens ruta</h3>
+<h3>Ã–versÃ¤ttarens ruta</h3>
 <P>
-Dessa sidor är översatta till svenska av SM5OUU Linus,
-antingen från den tyska eller den engelska versionen
+Dessa sidor Ã¤r Ã¶versatta till svenska av SM5OUU Linus,
+antingen frÃ¥n den tyska eller den engelska versionen
 som finns hos AGCW-DL
-som de såg ut <nobr>2007-01-16</nobr>.
-För att underlätta underhåll och jämförelser har sidornas namn, innehåll
-och layout bevarats i så stor utsträckning som är möjligt.
+som de sÃ¥g ut <nobr>2007-01-16</nobr>.
+FÃ¶r att underlÃ¤tta underhÃ¥ll och jÃ¤mfÃ¶relser har sidornas namn, innehÃ¥ll
+och layout bevarats i sÃ¥ stor utstrÃ¤ckning som Ã¤r mÃ¶jligt.
 </P>
 
 <P>
-Kommentarer på sidorna skickas lämpligen direkt till den ansvarige
-för sidorna (IK2RMZ på Email: EUCW (at) agcw . de).
-Kommentarer på översättningen skickas till översättaren via
+Kommentarer pÃ¥ sidorna skickas lÃ¤mpligen direkt till den ansvarige
+fÃ¶r sidorna (IK2RMZ pÃ¥ Email: EUCW (at) agcw . de).
+Kommentarer pÃ¥ Ã¶versÃ¤ttningen skickas till Ã¶versÃ¤ttaren via
 email: sm5ouu (at) ssa . se.
 </p>
 
