--- a/uft.html
+++ b/uft.html
@@ -8,18 +8,18 @@ translated: 2007-05-14
 </CENTER><P ALIGN=LEFT>
 <A HREF="http://www.uft.net"><b>UFT:</b>
 </A>
-Union Française des Télégraphistes (Franska unionen av telegrafister)<BR>
+Union FranÃ§aise des TÃ©lÃ©graphistes (Franska unionen av telegrafister)<BR>
 Telegrafiklubb i Frankrike.
-Medlemmar måste ha kunskap i franska språket.
-En stor del av alla franska telegrafivänner är medlemmar i UFT
+Medlemmar mÃ¥ste ha kunskap i franska sprÃ¥ket.
+En stor del av alla franska telegrafivÃ¤nner Ã¤r medlemmar i UFT
 som har en trevlig serie av aktiviteter inklusive en skriftlig bulletin
 kallad "La Pioche"
-[hackan? spettet? översättarens franskakunskaper är inte de bästa] 
-(på franska).
+[hackan? spettet? Ã¶versÃ¤ttarens franskakunskaper Ã¤r inte de bÃ¤sta] 
+(pÃ¥ franska).
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
