--- a/ylcwg.html
+++ b/ylcwg.html
@@ -11,13 +11,13 @@ translated: 2007-05-14
 <B>YL-CW-Group,</B>
 <!/A> 
 
-En klubb för tjejer och kvinnor.
-Förespråkar telegrafi i den kvinnliga amatörradiogemenskapen.
+En klubb fÃ¶r tjejer och kvinnor.
+FÃ¶resprÃ¥kar telegrafi i den kvinnliga amatÃ¶rradiogemenskapen.
 
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="eucw.html"> Tillbaka </a> till listan över klubbar <br>
+<a href="eucw.html"> Tillbaka </a> till listan Ã¶ver klubbar <br>
 <a href="index.html"> Tillbaka </a> till EUCWs startsida <br>
 
 <TABLE WIDTH="100%">
