--- a/euqrs.html
+++ b/euqrs.html
@@ -1,21 +1,272 @@
 ---
 priority: 9
+translated: 2024-03-16
 ---
 <html>
-  <head>
-    <meta http-equiv="Refresh" content="20;http://www.agcw.org/eucw/d/Deuqrs.html">
-    <title>EUCW info hos SCAG</title>
-  </head>
-  <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink="purple">
-    <h1>Sidan är ännu ej översatt!</h1>
-    <p>
-Denna sida är ännu inte översatt till svenska.
-Om en liten stund förflyttas du därför automatiskt till
-<a href="http://www.agcw.org/eucw/d/Deuqrs.html">
-http://www.agcw.org/eucw/d/Deuqrs.html
-</a>
-(på tyska)
-som är den icke översatta versionen av samma sida.
-    </p>
-  </body>
-</html>
+<head>
+<title>EUCWs QRS-vecka</title>
+<link rel="SHORTCUT ICON" href="eucw.ico">
+</head>
+<body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
+"purple">
+<table width="100%">
+<tr>
+<td align="left"><img src="eucwflag.gif" alt=""></td>
+<td align="center">
+<h3>Det europeiska CW-förbundet</h3>
+<h1 align="center">EUCWs QRS-vecka</h1>
+</td>
+<td align="right"><img src="agcw.gif" alt=""></td>
+</tr>
+</table>
+<p align="center">Översättning av regler<br>
+<a href="d/Deuqrs.html">
+<img src="f/de.gif" width="30" height="20" alt="DE"></a>
+&nbsp;
+<a href="pl-euqrs.html">
+<img src="f/pl.gif" width="30" height="20" alt="PL"></a>
+&nbsp;
+<a href="hu-euqrs.html">
+<img src="f/hu.gif" width="30" height="20" alt="HU"></a>
+&nbsp;
+<a href="fr-euqrs.html"> 
+<img src="f/fr.gif" width="30" height="20" alt="FR"></a>
+&nbsp;
+<a href="es-euqrs.html">
+<img src="f/es.gif" width="30" height="20" alt="ES"></a>
+&nbsp;
+<a href="it-euqrs.html">
+<img src="f/it.gif" width="30" height="20" alt="IT"></a>
+&nbsp;
+<a href="cz-euqrs.html">
+<img src="f/cz.gif" width="30" height="20" alt="IT"></a>
+&nbsp;
+<a href="euqrs.html">
+<img src="f/se.gif" width="30" height="20" alt="SV"></a>
+<h3>Allmänt</h3>
+<p>EUCW bjuder hjärtligt in alla radioamatörer och SWLs att vara med i
+  den årliga EUCW QRS-veckan.  Det här är inte en contest, tvärtom är
+  det en inbjudan till minska hastigheten och njuta av aktivitet i
+  långsam morse-takt under fem dagar.  Dagarna är valda för att
+  undvika de contest fyllda veckosluten.  Målet är inte att visa upp
+  sig och konkurrera utan att minska tröskeln för nykompligar som vill
+  prova på telegrafi.  Inställningen ska vara att delta som en service
+  till potentiella nykomlingar.  Det här kommer inte att ge er ära och
+  berömmelse men kan hjälpa andra även om det kan vara lite prövande
+  för tålamodet.</p>
+<p>Kör vilken station som helst, även medlemmar i EUCW-klubbar, men
+  använd bara QRS.  Vanliga QSO:n med icke-deltagande stationen kan
+  finnas med i loggarna.</p>
+<p>EUCWs QRS-vecka har en historia som sträcker sig ända tillbaka till
+  2001 när den infördes av FISTS.  EUCW tackar FISTS för denna
+  förträffliga ide och för att hantera allt arbete under det första
+  decenniet.  Sedan 2012 organiseras EUCW QRS-veckan av AGCW.  Ett
+  erkännande delas ut till de mest aktiva deltagarna.</p>
+<p>De som vill kan markera deltagare som utmärker sig med upp till tre
+  röster för den "mest läsbara telegrafin" (en röst per station).  Om du
+  inte vill rösta så anmäl det i loggen.</p>
+<h3>Datum och tid</h3>
+<p>Från måndag 0000z till fredag 2359z i veckan efter den fjärde
+  söndagen i april.</p>
+<pre>
+    Dvs.
+    2024: 29e april, 00:00 UTC till 3e maj, 23:59 UTC
+    2025: 28e april, 00:00 UTC till 2e May, 23:59 UTC
+</pre>
+<h3>MODER</h3>
+CW/A1A (Datorer som hjälper till att avkoda telegrafin är inte tillåtna)
+<h3>Klasser</h3>
+<br>
+A - Mer än 10W input eller 5W ut<br>
+B - QRP (10w input or 5w ut, eller mindre)<br>
+C - Lyssnaramatörer.<br>
+<p>Det finns också en osynlig klass av deltagande EUCW-klubbar.  Du
+  kan knyta ditt deltagande till den EUCW-klubb som du väljer.  Lägg
+  till klubbnamnet och ditt medlemsnummer i loggen.  Du får lov att
+  berätta din klubbtillhörighet i QSO:na men det krävs inte.  Det
+  finns ingen anledning att förvirra nykomlingar med klubbnamn och
+  kryptiska nummer.</p>
+<h3>ANROP</h3>
+<p>Det finns inget speciellt anrop men "CQ QRS" kan vara användbart
+  för att andra ska förstå att du deltar i den här aktiviteten.
+  Erfarna operatörer ska kalla CQ så mycket som möjligt för
+  nykomlingar kan vara blyga och föredrar att välja de stationer som
+  de lätta kan tolka.</p>
+<p>Rekommenderat frekvensområde (inget krav) är +/- 10 kHz från
+  centrumfrekvenserna nedan, inklusive WARC-banden (see nedan).</p>
+<p>Naturligtvis, icke-QRP-stationer ska inte ropa CQ på populära
+  QRP-frekvenser (se nedan). Håll dig innanför den delen av
+  amatörradiobanden som är reserverad för CW enligt nuvarande
+  bandblan.  Det här är en aktivitet och inte en contest så det finns
+  ingen anledning att undvika de contest-fria segmenten.</p>
+<h3>NYCKLAR och HASTIGHET</h3>
+<p>Använd vilken typ av nyckel du vill. Det är inte tillåtet att
+  använda tangentbord eller förprogrammerade meddelanden från datorer
+  och minnesbuggar, men förprogrammerade CQ-anrop som repeteras är
+  tillåtet.  Max-hastigheten är 70 tecken per minut (14 WPM).  Om den
+  som svarar gör det i långammare takt ska den som ropade CQ anpassa
+  sin hastighet till den takten.  De som använder förprogrammerade
+  CQ-anrop ska inte förvirra och försvåra för de som anropar genom att
+  byta till personlig och svårläst stil efter anropet.</p>
+<h3>KONTAKTER</h3>
+<p>Varje QSO ska pågå under minst fem minuter.  Normala trevliga QSO:n
+  utan speciella krav.  QSO med vilken station som helst kan loggas.
+  Du får ha kontakt med vilken station som helst i vilket land som
+  helst, inklusive stationer som inte deltar i QRS-partyt men försök
+  att övertyga dem att köra QRS.</p>
+<p>Ge realistisk RST-värde. Undvik att ge alla 599 av slentrian.</p>
+<p>Principen att alla stationer är likvärdiga oavsett hur remarkabla
+  deras prefix och suffix är.  Målet är att skapa så mycket QRS-trafik
+  som möjligt så kör gärna dina QSO-vänner varje dat.</p>
+<h3>LOGGAR</h3>
+<p>Alla loggar består av två delar.  En förtasida (sammanfattande blad)
+och listan av QSO.</p>
+<h3>LOGGENS FÖRSTASIDA</h3>
+<pre>
+    Denna information ska finnas med:
+
+    1) Egen anropssignal
+    2) Namn och QTH (som användes under aktiviteten)
+    3) Adress
+    4) En EUCW-klubben som du är medlem i
+    5) Klass (A=QRO, B=QRP eller C=SWL)
+    6) Antal giltiga QSOn
+    7) Dina röster för mest lästbara telegrafin
+    8) Hur du vill ha ditt erkännande: PDF eller papper. 
+</pre>
+<p>
+
+You are encouraged to add as much detail as you wish. You may
+wish to document details of your transmission such as alternative
+QTHs (a station in Chelmsford may have the habit to identify the
+town only in UK contacts, while the op might use "ESSEX" as qth
+with EU and "NR LONDON" with DX). Some may vary their handle, e.g.
+a DL may use Karl-Heinz locally, Karl inside DL, and Chas for DX.
+If you choose to be inconsistent when you identify your club you
+may wish to mention this, too. The added-value would be that
+additional detail is useful for (potential) SWL logs. Last but not
+least you should tell me whether you prefer an electronic
+recognition (PDF) or one one paper just in case you turn out to be
+one of the most active stations</p>
+<h3>LOG QSO DATA</h3>
+<pre>
+    Minimum QSO list columns 
+
+    1) Date (as YYYYMMDD) 
+    2) Time as UTC (as HHMM) 
+    3) Call (other stn) 
+    4) Band 
+    5) Mode (=CW) 
+    6) RST given to other stn 
+    7) RST received fm other stn 
+    8) Name received fm other stn 
+    9) QTH of other stn given on air
+
+Try to avoid logging software which fills name and qth fields out of
+call book or Internet lookups. Instead, log what you hear on the air.
+</pre>
+<p>For RST given, RST received, Name, and QTH, the columns must be
+included but incorrect or missing values in them are acceptable.
+You are encouraged to add as much detail as you wish, e.g. tx, ant,
+wx of the other stn</p>
+<h3>LOG SUBMISSION</h3>
+<p>LOG SUBMISSION depends on your logging style. One of three cases
+apply.</p>
+<pre>
+    I) You master log is created by a computer.
+       <a href="euqrsi.html">Click here for example log I</a>
+    II) You are logging on paper but you have Internet access.  
+       <a href="euqrsii.html">Click here for example log II</a>
+    III) Paper logging and log submission on paper.
+       <a href="euqrsiii.html">Click here for example log III</a>
+</pre>
+<p>I) Users of logging software export their log as ADIF files
+(extension .adi) and verify the presence of the minimum data.
+Please do not forget to add the header data and put them in the
+text of your email. NOTE: Check the ADIF file visually for the
+presence of all elements, some ADIF creators may omit relevant
+fields. BEST PRACTICE: Download the FISTS Log Converter and use it
+to post-process your log (See chapter RECOMMENDED SOFTWARE).</p>
+<p>II) If you transfer a log manually the best choice is to pass
+the data to a logging software and export as ADIF as above. If you
+wish to create your files manually from scratch with an editor or
+spread sheet software please create .txt or .csv files in plain
+ASCII code that do not require a particular software. If asked for
+a delimiter choose semicolon. Don't forget the header data.</p>
+<p>III) Manual Logs are quite ok, the least painful procedure is to
+go to a copy shop and to draw photocopies from the original log.
+Another idea is to ask a relative or friend to take a picture of
+the log, verify the readability and email it.</p>
+<p>The predominant idea is that any log is better than no log at
+all just as a partial qso is better than no qso. The EuCW QRS is
+primarily not a competition but an opportunity for CW newcomers and
+CW skeptics to enjoy Morse code without fear from excessive speeds.
+If you have a choice, please send a Log in format II. Some users
+find it hard not to use their spread sheet programs. If you belong
+to these, please fill all entries in all records and please use the
+yyyymmdd format.</p>
+<h3>RECOMMENDED SOFTWARE</h3>
+<p>http://fists.co.uk/members/membersflc.html The free FISTS Log
+Converter for Windows should be used to create log submissions for
+EuCW QRS Week. It can either read QSOs from an ADIF file exported
+from most logbook programs, or if you don't currently use a logbook
+program, its own logbook feature can be used to create an
+electronic log from scratch. Users of other operating systems may
+prefer logging style I. If you are using a modern logging software please
+switch off the autofill option adding name or qth by using a local or remote
+database. You must enter the on-air names and the qth used on air, otherwise
+a penalty is possible.
+</p>
+<h3>SEND LOGS TO</h3>
+<img src="qrs.png" alt= "ik2-rmz">
+<h3>DEADLINE</h3>
+<p>Log must arrive not later than 31st May</p>
+<h3>FREQUENCY ACTIVITY CENTERS</h3>
+<p>Recommended area of activity +/- 10 kHz from the activity
+centers as follows:</p>
+<pre>
+    2m 144.065 MHz (avoid 144050 because of the E_s season)
+    6m Use any frequency compatible with the IARU band plan
+    10m 28.055 MHz (Recommended IARU frequency for QRS)
+    12m 24.905 MHz 
+    15m 21.055 MHz (Recommended IARU frequency for QRS)
+    17m 18.085 MHz 
+    20m 14.055 MHz (Recommended IARU frequency for QRS)
+    30m 10.125 MHz 
+    40m  7.035 MHz (stay in the exclusive CW band 7000-7040 kHz)
+    80m  3.555 MHz (Recommended IARU frequency for QRS) 
+    160m Use any frequency compatible with the IARU band plan
+</pre>
+<p>QRP CW Calling Frequencies to be avoided by non-QRP (cq calling)
+stations. 1843; 3560; 7030; 10116; 14060; 18096; 21060; 24906;
+28060 kHz.</p>
+<p>Under good North America condx 14056.5, 18091.5, 21056.5,
+10122.5 are often used as frequencies of the Mobile Emergency and
+County Hunters Net where dozens of stations participate.</p>
+<p>These recommendations are given as a help to find other QRS
+partners they are not binding. However, decent operators know and
+respect the IARU band plan which is established by the
+international community of hams. Download a copy of the band plan
+at iaru.org before switching on a TX. Try to avoid the lower end of
+the CW bands.</p>
+<p>New friends of CW who do not yet feel ready to put their CW on
+air are invited to read the <a href="euqrsswl.html">SWL</a>
+rules.</p>
+<p>RESULT LISTS</p>
+<p><a href="euqrs01.html">2001</a> <a href=
+"euqrs02.html">2002</a> <a href="euqrs03.html">2003</a>
+<a href="euqrs04.html">2004</a> <a href="euqrs05.html">2005</a>
+<a href="euqrs06.html">2006</a> <a href="euqrs07.html">2007</a>
+<a href="euqrs08.html">2008</a> <a href="euqrs09.html">2009</a>
+<a href="euqrs10.html">2010</a> <a href="euqrs11.html">2011</a>
+<a href="euqrs12.html">2012</a> <a href="euqrs13.html">2013</a>
+<a href="euqrs14.html">2014</a> <a href="euqrs15.html">2015</a>
+<a href="euqrs16.html">2016</a> <a href="euqrs17.html">2017</a> 
+<a href="euqrs18.html">2018</a> <a href="euqrs19.html">2019</a>
+<a href="euqrs20.html">2020</a> <a href="euqrs21.html">2021</a>
+<a href="euqrs22.html">2022</a> <a href="euqrs23.html">2023</a> 
+</p>
+<P>
+The QRS Week is sponsored and organized by AGCW-DL.
+</body>
+<a href="dp.pdf"><FONT size="-2">Privacy Policy</FONT></a></html>
